--- a/03_위원회와 주요 이슈(1).md
+++ b/03_위원회와 주요 이슈(1).md
@@ -2,44 +2,74 @@
 
 ## 국회의 구성
 ### 위원회와 본회의
-국회에서 법안이 의결되거나 회의를 할 때에는 크게 3단계를 거친다.
+국회에서 어떤 사안을 논의하는 회의는 크게 3가지 종류로 나뉜다.
+	- 본회의: 뉴스에 흔히 나오는, 국회의원 300명 전원이 큰 홀(본회의장)에 모여서 진행하는 회의. 
+	- 위원회: 행정부 업무 중 특정한 분야를 전문적으로 담당하는 회의. 위원회마다 12~ 30명의 국회의원으로 구성된다. 
+	- 소위원회: 위원회 안에서 세부적으로 특정한 분야를 전문적으로 담당하는 회의. 소위원회마다 4~ 12인의 국회의원으로 구성된다.
 
-- 본회의: 
-- 위원회: 
-- 소위원회: 
+예를 들어보자. 소득세 세율을 바꾸는 법안이 발의되면, 이 법안의 심사작업은 조세제도를 담당하는 기획재정위원회에 배정된다. 기획재정위원회(기재위, 26인)의 조세소위원회(13인)에서 법안을 1차로 심사하고, 여기서 논의한 내용을 기재위 전체회의에서 2차로 심사한 뒤, 기재위를 통과하면 본회의 안건으로 상정된다. 비슷하게, 질병관리본부 운영예산을 증가시키는 안건이 발의되면, 질병관리본부를 담당하는 보건복지위원회(22인)의 예산결산심사소위원회(10인)부터 심사를 시작하여 두 차례의 심사 후 본회의까지 올라간다. 
 
-한국 국회는 “위원회 중심의 의회 ”라고 평가받는다. 
+한국 국회는 “위원회 중심의 의회”라고 평가받는다. 법안을 심사하거나 행정부에 질의하는 등 대부분의 심도있는 의정활동은 위원회에서 처리되고, 본회의에서는 위원회가 통과시킨 안건을 (극렬한 쟁점안건이 아닌 이상) 별다른 반대 없이 빠르게 통과시키기 때문이다. 위원회 중심의 의회에서는 의원들이 특정 사안에 대해서 집중적으로 공부하고 토론하므로 전문성이 높아지는 대신, 국정 전반에 대한 폭넓은 비판과 대안제시를 하기 어렵다. 이와 반대되는 “본회의 중심의 의회”로 평가받는 영국 하원의회에서는, 모든 법안과 의결사항을 처음부터 본회의에서 토론하고 의결하게 되어 있다. 따라서 해당 사안에 관심이 있는 의원은 모두 자유롭게 토론에 참여할 수 있고, 본회의 내용을 바탕으로 법안을 세부적으로 조정할 때에만 위원회를 소집한다. 
 
-법안을 심사하는 과정을 보자. 
-예를 들어, 영국 하원의회는 “본회의 중심의 의회 ”라고 평가받는다. 모든 법안과 의결사항은 기본적으로 본회의에서 바로 토론하고 의결하게 되어 있다. 따라서 해당 법안에 관심이 있는 의원은 모두 자유롭게 토론에 참여할 수 있고, 법안을 세부적으로 조정할 때에만 
+### 상임위원회와 특별위원회
+한국 국회의 위원회는 상임위원회(상임위)와 특별위원회로 나뉜다. 
 
-### 국회의장과 교섭단체
-한국에서 국회의장과 위원회 위원장을 선출하는 과정은 교섭단체의 입김이 강하게 들어간다. 
+상임위원회는 행정부의 특정 기관을 도맡아서 상시 열리는 위원회다. 예를 들어 국회 국방위원회는 국방부 소관업무를, 보건복지위원회는 보건복지부 소관업무를 담당하는 식이다. 국회의원 임기는 4년이지만 상임위는 2년에 한 번씩(상반기 국회, 하반기 국회) 재구성하므로, 국회의원은 4년의 임기 동안 자신이 일할 상임위 한 곳을 선택할 2번의 기회를 가진다. 다만 <국회법>에 의해 각 상임위원회 정원이 정해져 있으므로 항상 본인이 원하는 상임위에 배정되는 것은 아니다. 
 
-### 비교섭단체
-반대로, 비교섭단체는 
+2020년 3월 현재 한국 국회에는 다음의 17개 상임위원회가 있다. 순서는 <국회법>의 규정에서 나열하는 순서를 따른다. 별표(*)된 상임위는 '겸임 상임위원회'로, 나머지 다른 상임위와 겸임할 수 있도록 허용되어있다. 
+	- *국회운영위원회 (국회의원 정원 28명)
+	- 법제사법위원회 (18명)
+	- 정무위원회 (24명)
+	- 기획재정위원회 (26명)
+	- 교육위원회 (16명)
+	- 과학기술정보방송통신위원회 (21명)
+	- 외교통일위원회 (22명)
+	- 국방위원회 (17명)
+	- 행정안전위원회 (22명)
+	- 문화체육관광위원회 (17명)
+	- 농림축산식품해양수산위원회 (19명)
+	- 산업자원통상중소벤쳐기업위원회 (29명)
+	- 보건복지위원회 (22명)
+	- 환경노동위원회 (16명)
+	- 국토교통위원회 (30명)
+	- *정보위원회 (12명)
+	- *여성가족위원회 (17명)
 
-### 다시, 위원회
-극단적으로, 국방위원회에 성소수자 차별금지를 중시하는 의원 1명이 소속되면 국군 내의 성소수자 색출 문제를 국회에서 논의할 수 있고, 교육위원회에 사립학교 재단 이사 출신 의원 1명이 소속되면 사립학교 운영에 국가가 개입하는 정책의 논의가 질질 끌어질 수 있는 환경이 마련되는 셈이다.
+특별위원회는 특별히 논의가 필요한 이슈가 있을 때 일시적으로 운영하는 위원회이다. 2016-2020 국회에서 만들어진 특별위원회 몇몇 개의 이름을 살펴보면 그 성격을 알 수 있다. '대법원장(김명수)임명동의에관한인사청문특별위원회', '저출산·고령화대책특별위원회', '미세먼지대책특별위원회', '헌법개정특별위원회', '평창동계올림픽및국제경기대회지원특별위원회' 등. 다만 예산결산특별위원회는 매년 중앙정부 예산 전체를 심사하고 결산해야 하므로, <국회법> 규정을 통해 상설운영된다. <전국투표전도 2020>에서는 2016-2020 국회에서 특별히 주목받은 특별위원회들의 역할을 소개한다. 
+	- 예산결산특별위원회 (50명)
+	- 정치개혁특별위원회 (2017. 08. 21 ~ 2019. 08. 29, 19명)
+	- 사법개혁특별위원회 (2018. 01. 12 ~ 2019. 08. 23, 16명)
+
+
+### 교섭단체와 비교섭단체
+국회의원이 소속된 정당들은 규모에 따라 교섭단체와 비교섭단체로 나뉜다. 교섭단체는 '국회에서 교섭(협상)할 권리를 가진 단체'이다. 본회의와 상임위의 의사일정, 안건조정, 인원배정 등은 모두 교섭단체끼리 논의한다. 17개 상임위원회 위원장을 교섭단체의 의원 비율에 따라 배분한다던가, 각 위원회마다 교섭단체를 대표해서 의사일정을 논의하는 간사 1인을 배정하여 국회 운영에 관여할 수 있다. 교섭단체는 정당이 받는 국고보조금을 추가로 받거나, 국회의 지원을 받아 자체 정책연구위원을 고용하는 등의 혜택도 주어진다. 
+
+교섭단체를 구성하는 기준은 국회의원 20명이다. 즉, 의원이 20명 이상인 정당은 1개의 교섭단체를 꾸리고, 그 정당의 원내대표는 '교섭단체 대표의원'으로서 국회일정과 안건을 논의하는 자리에 참석할 수 있다. 뿐만 아니라, 여러 정당끼리 합쳐서 20명 이상의 규모가 되면 1개의 교섭단체를 꾸릴 수도 있다. 한국에서는 그런 경우가 지금까지 2번 있었다. 2008-12년 국회에서 자유선진당(18석: 충청권 보수 제3정당)과 창조한국당(3석: 진보적 제3세력 정당)이 '선진과 창조의 모임'이라는 이름으로, 2016-20년 국회에서 민주평화당(14석: 전라권 민주당계 제3정당)과 정의당(6석: 사민주의 정당)이 '평화와 정의의 모임'이라는 이름으로 교섭단체를 꾸렸다. 
+
+### 다시, 위원회와 의원 배정
+앞서서 한국 국회에서 위원회가 차지하는 중요성, 그리고 교섭단체가 가지는 권한에 대해 설명했다. 촉이 좋은 독자는 눈치챘을 것이다. "상임위원회 배정를 정할 때 교섭단체끼리 치열하게 다투겠구나." 2년에 한 번씩 상임위 배정을 할 때, 각 정당(교섭단체) 원내대표들은 2년 간의 의정활동 계획과 목표를 바탕으로 위원회별 의원 배치 전략을 가지고 협상을 진행한다. 자기 당에서 반드시 통과시키고 싶은 노동관련 법안이 있다면 환경노동위원회에 더 많은 의원들을 넣으려고 할 것이고, 선거법 의제를 주도적으로 풀어가려면 정치개혁특별위원회 위원장을 배정받으려고 할 것이다. 이를 위해 다른 위원회의 의석수와 위원장 자리를 양보하는 타협을 해서라도 말이다. 
+
+위원회 배정 문제는 정당의 전략 차원을 넘어서, 국회의원 개인의 역량과 국회 바깥 사회의 요구와도 밀접한 연관이 있다. 극단적으로, 국방위원회에 성소수자 차별금지를 중시하는 의원 1명이 소속되면 한국군 내의 성소수자 색출 문제를 국회에서 논의할 수 있고, 교육위원회에 사립학교 재단 이사 출신 의원 1명이 소속되면 사립학교 운영에 국가가 개입하는 정책의 논의를 질질 끌 수 있는 환경이 마련되는 셈이다. 반대로 해당 의제를 담당할 적임자 의원 1명이 해당 상임위에 배정되지 못하면, 그 의제에 대해 논의하거나 대항할 길이 막히는 셈이다. 12~ 30명의 적은 인원이 모이는 위원회 안에서 특정 분야에 대한 논의가 대부분 이뤄지는 환경이다보니, 위원회에 포진한 의원 한 명 한 명의 명단, 그리고 그 한 명의 활동내역은 국회 바깥 사회에 엄청난 영향을 끼친다. 당신이 국회의원 한 명의 4년간 성과를 평가할 때 반드시 살펴봐야 할 내용이다.
+
 
 ## 입법부 및 정치, 대통령 관련
 **국회는 정치를 업무로 삼는 곳이고, 모든 직종이 그렇듯 업무체계와 스케쥴 관리 등에 따라 결과물의 질이 확연히 달라진다. 회사(국회) 바깥에서는 잘 드러나보이지 않겠지만.**
 
 ### 국회운영위원회(운영위) #1
-국회운영위원회는 국회의 주요 일정을 결정한다. 언제 국회를 열 것인지, 본회의를 언제 열지, 의사일정 상의 안건을 어떻게 배치할 것인지 등을 국회의장과 함께 협의하는 공간이 된다. 이 과정은 각 당이 원하는 입법안과 예산안이 통과될 가능성을 높이고, 국정을 효과적으로 비판하고 견제하기 위한 전략을 짜는 과정이므로, 국회 바깥에서는 별 관심을 받지 못하지만 국정 전반에 가장 큰 영향력을 끼친다고 할 수 있다. 이 때문에 각 당마다 의원들이 선출한 원내지도부가 운영위 위원이 되어서 치열한 수싸움에 참여한다.
+국회운영위원회는 국회의 주요 일정을 결정한다. 언제 국회를 열 것인지, 본회의를 언제 열지, 의사일정 상의 안건을 어떻게 배정할 것인지 등을 국회의장과 함께 협의하는 공간이 된다. 이 과정은 각 당이 원하는 입법안과 예산안이 통과될 가능성을 높이고, 국정을 효과적으로 비판하고 견제하기 위한 전략을 짜는 과정이므로, 국회 바깥에서는 별 관심을 받지 못하지만 국정 전반에 가장 큰 영향력을 끼친다고 할 수 있다. 이 때문에 각 당마다 의원들이 선출한 원내지도부가 운영위 위원이 되어서 치열한 수싸움에 참여한다.
 
 또한 운영위는 국회의 운영과 관련된 사항을 논의한다. 이 논의대상에는 국회의 모든 운영실무를 책임지는 국회사무처와, 국회의원의 의정활동을 돕는 자료/정책/법률 싱크탱크인 국회도서관, 국회예산정책처, 국회입법조사처, 그리고 국회의원 1명과 함께 일하는 보좌관의 운영, 처우, 직무 등의 내용이 포함된다. 국회의원 1명이 유권자의 대표로서 넓고 전반적인 시야를 가지고 그들의 의사를 대변한다면, 이들 기관은 의정활동을 위한 행정처리업무를 돕고, 법률안과 예산안의 세부적인 내용을 자세하게 조사하여 국회의원에게 의견을 전달하는 역할을 한다. 선의를 가진 열정적인 국회의원이 의정업무를 제대로 보려면 이들 기관의 도움이 필수적이므로, 이들에게 역할과 예산을 배분하는 국회 운영위는 소위 ‘일하는 국회’를 만드는 데에 매우 핵심적인 역할을 한다. 
 
 마지막으로 운영위는 대통령 및 대통령 직속기관과 관련된 사안을 담당한다. 행정부 수장이자 국가를 대표하는 대통령을 견제하는 것은 국회 전체가 대통령과 대등한 입장에서 진행할 일이므로, 국회 전체를 대표한다고 할 수 있는 운영위원회가 이를 맡는 것이다. 여기에는 대통령의 국정운영 방식 전반에 영향을 미치는 대통령비서실(속칭 ‘청와대’), 그리고 국가 비상상황에 대응하는 국가안보실이 여기에 포함된다. 대통령과 직접 연관된 주제는 언론 정치면 헤드라인을 장식하게 좋으므로, 국회와 기관장 사이의 토론이 일상적으로 활발하게 이뤄진다.
 
-### 교섭단체 원내대표 모임
-공식적인 위원회는 아니지만, 교섭단체 원내대표들은 국회가 열리는 때는 물론 휴식기에도 부지런히 만나서 여러가지 협상을 한다. 각 상임위원회에 당마다 몇 명의 의원을 배치할 것인지, 이번 국회에서 어떤 안건을 논의할지, 논의 일정을 어떻게 할지, 행정부의 어떤 사람을 출석시켜서 질의할 것인지, 등등을 교섭단체 원내대표끼리 협상해서 결정한다. 
+### 국회의장과 교섭단체 원내대표 모임
+공식적인 위원회는 아니지만, 국회의장과 교섭단체 원내대표들은 국회가 열리는 때는 물론 휴식기에도 부지런히 만나서 여러가지 협상을 한다. 각 상임위원회에 당마다 몇 명의 의원을 배정할 것인지, 이번 국회에서 어떤 안건을 논의할지, 논의 일정을 어떻게 할지, 행정부의 어떤 사람을 출석시켜서 질의할 것인지, 등등을 협상해서 결정한다. 
 
 특히 2012년부터 이른바 ‘국회선진화법’(<국회법> 개정안)이 시행되면서, 교섭단체 원내대표가 합의한 법률안은 심사과정을 간소화하여 본회의 안건으로 빠르게 올릴 수 있게 되었다. 법률안 1개를 심사하기 위해 위원회별로 여러 번의 여론 수렴과 의원토론를 거치느라 통상 몇 년씩 시간이 걸린다는 사실을 고려하면, 교섭단체 원내대표의 합의를 이끌어내는 것은 각 당(교섭단체)이 반드시 추진하려는 법안을 실현시키는 훌륭한 방법이다. 따라서 각 당(교섭단체) 원내대표는 국회에서 가장 쟁점이 되는 법안 몇 가지를 묶어서 협상 테이블에 올린다. 이것은 협상이나 야합처럼 보일 수도 있지만, 여론을 반영하여 쟁정법안을 빠르게 처리하는 과정이기도 하다. 2016-2020 국회에서 이렇게 가결된 굵직굵직한 법안이 많다. 2018년의 <산업안전보건법> 개정안(속칭 ‘김용균법’)과 <근로기준법> 개정안(속칭 ‘주 52시간 근로제’), 2019년의 <도로교통법>과 <주차장법> 개정안(속칭 ‘민식이·하준이법’) 등. 이들은 각 상임위원회에서 오랫동안 합의가 이뤄지지 못한 법안이었으나, 언론과 여론의 관심이 모여 정계 주요이슈로 떠오르자 교섭단체 원내대표 협상을 통해 빠르게 합의가 이루어졌다.
 
 ### 법제사법위원회(법사위) #1
-법제사법위원회는 본래 의도와 다르게, 다른 상임위를 통과한 법률안을 지연시키거나 사실상 다른 법률안으로 바꿔버릴 수 있는 막강한 권한을 가지고 있다. 오로지 법사위에만 있는 “법률안 체계·자구 심사 ” 권한 때문이다. 
-다른 위원회에서 논의를 마치고 가결시킨 법률안은 본회의에 올라가기 전에 법사위에서 한번 더 심사를 받는다. 법률안 내용이 다른 법과 충돌하거나 기술적인 문제점이 있을 때, 이를 다듬어서 본회의로 올리는 것이 법사위의 역할 중 하나이다. 문제는 이 권한을 남용하는 경우이다. 법사위가 법률안 심사를 고의로 지연시키거나 법률안 내용을 완전히 바꿔버리는 경우가 심심치 않게 발생한다. 예를 들어, 여성가족위원회나 행정안전위원회가 동성 결혼을 제도화하는 법률안을 통과시키더라도, 법사위에서 이것이 “한국 법률체계에서는 이런저런 이유로 맞지 않는다, 위헌 소지가 있다 ”고 자의적으로 판단하여 해당 내용을 삭제한 채 본회의에 올린다면, 이를 막을 방법이 없다.
+법제사법위원회는 본래 의도와 다르게, 다른 상임위를 통과한 법률안을 지연시키거나 사실상 다른 법률안으로 바꿔버릴 수 있는 막강한 권한을 가지고 있다. 오로지 법사위에만 있는 “법률안 체계·자구 심사” 권한 때문이다. 
+다른 위원회에서 논의를 마치고 가결시킨 법률안은 본회의에 올라가기 전에 법사위에서 한번 더 심사를 받는다. 법률안 내용이 다른 법과 충돌하거나 기술적인 문제점이 있을 때, 이를 다듬어서 본회의로 올리는 것이 법사위의 역할 중 하나이다. 문제는 이 권한을 남용하는 경우이다. 법사위가 법률안 심사를 고의로 지연시키거나 법률안 내용을 완전히 바꿔버리는 경우가 심심치 않게 발생한다. 예를 들어, 여성가족위원회나 행정안전위원회가 동성 결혼을 제도화하는 법률안을 통과시키더라도, 법사위에서 이것이 “한국 법률체계에서는 이런저런 이유로 맞지 않는다, 위헌 소지가 있다”고 자의적으로 판단하여 해당 내용을 삭제한 채 본회의에 올린다면, 이를 막을 방법이 없다.
 
 그래서 법사위는 입법부와 정치가 작동하는 협상장에서 (지나치게) 매우 중요한 역할을 차지한다. 다른 국회의원들이 각 상임위에서 법률안을 통과시키더라도, 법사위 소속 위원들, 또는 각 정당의 지도부가 법사위에서의 처리를 최대한 지연하면서 협상카드로 활용한다. 이런 점에서 법사위를 국회와 별도의 ‘상원’ 의회처럼 바라보는 관점도 있다. 
 
@@ -48,7 +78,7 @@
 
 정개특위가 논의하는 사항은 그저 정치인의 이권이 달린 문제처럼 보일 수도 있다. 그러나 그 중에는 일반시민이 유권자 또는 직업정치인으로 정치에 참여하는 데 매우 중요한 문제들이 있다. 예를 들면 투표권 연령, 출마할 수 있는 나이, 평범한 유권자가 특정 정치인을 후원하는 방법, 후보등록할 때 납부해야 하는 공탁금액 등이 있다. 역대 정개특위가 조금씩 정치의 ‘제한’을 풀면서 정치 참여의 허들이 낮아졌고, (여전히 어려운 환경이지만) 한국에서도 다양한 목소리를 내며 직접 정치에 참여하려는 시민이 늘어나고 있다. 
 
-2016-2020 국회의 정개특위는 특별히 많은 주목을 받았다. 2020 총선부터 적용될 새로운 국회의원 선거제도를 만드는 문제 때문이었다. 유권자가 표현한 민의를 정확하게 국회에 반영해야 한다는 원칙적 요구 뿐만 아니라, 의석수 이해관계에 따른 각 정당의 협력과 갈등, 국정을 총괄하여 벌어지는 정책공조의 중요한 협상이 모두 정개특위를 중심으로 이루어졌다. 그 결과 한국에 ‘절반 연동형 비례대표제’가 도입되었고(1권 ‘선거 개괄’, p. XXX 참고), 한국의 정치지형은 2020년을 기준으로 큰 변화를 맞이하게 되었다. 
+2016-2020 국회의 정개특위는 특별히 많은 주목을 받았다. 2020 총선부터 적용될 새로운 국회의원 선거제도를 만드는 문제 때문이었다. 유권자가 표현한 민의를 정확하게 국회에 반영해야 한다는 원칙적 요구 뿐만 아니라, 의석수 이해관계에 따른 각 정당의 협력과 갈등, 국정을 총괄하여 벌어지는 정책공조의 중요한 협상이 모두 정개특위를 중심으로 이루어졌다. 그 결과 한국에 ‘절반 연동형 비례대표제’가 도입되었고(1권 ‘선거 개괄’, p.XXX 참고), 한국의 정치지형은 2020년을 기준으로 큰 변화를 맞이하게 되었다. 
 
 #### 서울 서대문구 갑, 전남 목포시
 **더불어민주당 우상호, 국민의당-민주평화당 박지원**
@@ -69,16 +99,20 @@
 ### 법제사법위원회(법사위) #2
 법제사법위원회는 행정부의 법무부, 감사원, 검찰청, 법제처 및 그 산하기관, 그리고 사법부인 법원 및 헌법재판소와 관련된 사안을 다루는 위원회다. 여기에 대통령이나 법관 등 공직자의 탄핵소추가 국회에서 의결되었을 때, 법사위는 국회를 대표하여 헌법재판소에서의 탄핵심판을 책임진다. 
 
-한국에서 법률과 관련된 
+한국의 정치 고관심층 사이에서는 검찰의 '중립성'과 수사의 '적절성', 검찰의 인사발령 등 검찰청 관련 내용이 유달리 주목받고, 이에 대한 논쟁이 법사위 안건의 전부인 것 처럼 보도된다. 그러나 법사위가 담당할 다른 사안들도 그에 못지 않게 중요하다. 예를 들어 판사가 제대로 심판할 수 있도록 숙고할 수 있는 여유를 확보하는 구조를 만드는 문제, 개별 판결문을 공공정보로 공개하는 사업, 법무부의 외국인 입국자 관리감독, 범죄자 교정시설(교도소, 구치소 등) 관리감독, 감사원의 행정부 감사업무에 대한 감사 등등. 제아무리 법에 따라 통치하는 국가라 하더라도, 그 법에 따라 감사/수사하고, 기소하고, 판결을 내리고, 판결 내용을 실행하는 과정에는 모두 사람의 주관과 의지가 개입되기 마련이다. 따라서 국회가 법사위를 통해 이 과정에 대해 토론하고 제안하는 것, 사법부와 사법행정기관을 견제하는 것은, 법에 따른 통치가 제대로 실행되기 위해 반드시 필요하다.
 
 ### 사법개혁특별위원회(사개특위)
-2016-2020 국회에 설치된 사법개혁특별위원회는 매우 막중한 과제를 안은 채 출범했다. 사개특위의 큰 목표는 2가지였다. 첫째, 양승태 대법원장(2011~ 17) 시절의 대법원이 법관인사권을 이용해 개별 판사의 재판에 압력을 가하거나, 박근혜 행정부로부터 대법원에 유리한 제도를 얻어내기 위해 일종의 `재판거래(이 재판거래는 일제 강제징용 배상판결을 고의로 진행하지 않은 것을 비롯해, 각종 노동, 사회 관련 시국사건에 대한 개입으로 이어졌다.)`를 한 사건이 재발하지 않도록 예방책을 만드는 것. 둘째, 검찰과 경찰의 수사권/기소권을 조정하고 검찰로부터 독립된 고위공직자 수사 전담 행정부서(’고위공직자수사처’, 약칭 ‘공수처’)를 설치하여 검찰 견제구조를 만드는 것. 
+2016-2020 국회에 설치된 사법개혁특별위원회는 매우 막중한 과제를 안은 채 출범했다. 사개특위의 큰 목표는 2가지였다. 첫째, 양승태 대법원장(2011~ 17) 시절의 대법원이 법관인사권을 이용해 개별 판사의 재판에 압력을 가하거나, 박근혜 행정부로부터 대법원에 유리한 제도를 얻어내기 위해 일종의 `재판거래(이 재판거래는 일제 강제징용 배상판결을 고의로 진행하지 않은 것을 비롯해, 각종 노동, 사회 관련 시국사건에 대한 개입으로 이어졌다.)`를 한 사건이 재발하지 않도록 예방책을 만드는 것. 둘째, 검찰과 경찰의 수사권/기소권을 조정하고 검찰로부터 독립된 고위공직자 수사 전담 행정부서(‘고위공직자수사처’, 약칭 ‘공수처’)를 설치하여 검찰 견제구조를 만드는 것. 
 
-#### 서울 은평구 갑: 박주민
+이상의 내용은 문재인 행정부와 민주당계 정당이 오랜 시간동안 역점을 가지고 추진한 사업이자, 사법부와 사법 절차가 민주정에 맞게 작동하기 위해 한 번은 반드시 제대로 논의되어야 했던 사항이었다. "법원과 검찰이 정치적으로 변질되었다"는 주장을 제쳐놓더라도, 검찰이 어떤 사건을 수사하느냐, 법원이 어떻게 판결을 내리느냐에 따라 그 대상이 되는 개인에게 미치는 영향이 엄청나게 크기 때문에, 사법 절차가 잘 진행되도록 재판부와 검찰의 권력이 감시받을 필요가 있기 때문이다.  
+
+2019년부터 공수처는 중앙정계를 뒤흔드는 문제로 떠올랐다. 더불어민주당, 바른미래당, 민주평화당, 정의당이 '절반 연동형 비례대표제' 선거제도 법안과 공수처 설치 법안을 함께 추진하는 입법연대를 구성한 것이다. 앞서 살펴본 정개특위(p.XXX 참조)가 그러했듯, 사개특위에서의 공수처 논의가 어떻게 진행되느냐에 따라, 나머지 쟁점법안의 처리여부와 정국 전체의 흐름이 요동쳤다. <고위공직자범죄수사처 설치 및 운영에 관한 법률안>은 결국 2019년 12월 30일에 본회의를 통과했다. 
+
+#### 서울 은평구 갑, 경기 수원시 을: 박주민, 백혜련
 
 #### 서울 강서구 을: 금태섭
 
-#### 
+#### 광주 광산구 을: 권은희
 
 
 ## 행정부 운영, 예산 및 경제 관련
@@ -87,7 +121,7 @@
 ### 정무위원회(정무위) #1
 정무위원회는 국무총리가 장관을 거치지 않고 직접 관할하는 중앙정부 부처 대부분과 관련된 사항을 논의한다. 한국의 국무총리는 보통 대통령이나 각부 장관에 밀려서 많은 실권을 가지지 못한다. 따라서 정무위가 다루는 주요 이슈는, 큰 사건이 언제나 터져나오는 정계에서 중요한 논쟁거리가 되기는 어렵다. 그러나 대형 재난이나 국가적 이벤트, 사회 전반에 영향을 끼치는 사건 등등 여러 부처가 범정부적으로 대응해야 하는 이슈가 생길 때, 국무총리가 모든 부처를 모아서 전체적인 대응을 주도한다. 따라서 정무위는 행정부가 빠르게 많은 자원을 투입해야 하는 긴급한 사안들을 다루는 일이 많다.
 
-국무총리 관할 부처 중에서 국무조정실(속칭 “총리실 ”)과 금융위원회가 그런 역할과 관계가 깊다. 국무조정실은 행정부 각 부의 업무분장을 직접 조절하고 부처별 정책을 행정부 차원의 단일안으로 조정하는 역할을 하며, 학술적으로 정부정책을 연구하고 각 부처에 제안하는 24개의 정부출연연구기관을 관할한다. 금융위원회는 국내 금융정책을 총괄하고 자본금융시장을 관리감독하는데, 은행·증권·보험 등을 모두 포괄하므로 국민생활과 거시경제구조, 자금흐름을 기반으로 한 기업 및 산업구조 등등에 모두 커다란 영향을 끼칠 수 있다. 이처럼 눈에 잘 띄지 않지만 중장기적으로는 파급력이 큰 정부부처들이 국무총리 산하에 모여있다. 따라서 국회 정무위는 이들 기관으로부터 현안을 보고받고 국정감사를 통해 개선점을 지적함으로서, 비상상황에서 행정부의 대처능력, 그리고 행정부가 (정권을 초월해서) 제시하는 중장기적인 정책방침을 좌우하는 데에는 매우 중요한 역할을 맡고 있다.
+국무총리 관할 부처 중에서 국무조정실(속칭 “총리실”)과 금융위원회가 그런 역할과 관계가 깊다. 국무조정실은 행정부 각 부의 업무분장을 직접 조절하고 부처별 정책을 행정부 차원의 단일안으로 조정하는 역할을 하며, 학술적으로 정부정책을 연구하고 각 부처에 제안하는 24개의 정부출연연구기관을 관할한다. 금융위원회는 국내 금융정책을 총괄하고 자본금융시장을 관리감독하는데, 은행·증권·보험 등을 모두 포괄하므로 국민생활과 거시경제구조, 자금흐름을 기반으로 한 기업 및 산업구조 등등에 모두 커다란 영향을 끼칠 수 있다. 이처럼 눈에 잘 띄지 않지만 중장기적으로는 파급력이 큰 정부부처들이 국무총리 산하에 모여있다. 따라서 국회 정무위는 이들 기관으로부터 현안을 보고받고 국정감사를 통해 개선점을 지적함으로서, 비상상황에서 행정부의 대처능력, 그리고 행정부가 (정권을 초월해서) 제시하는 중장기적인 정책방침을 좌우하는 데에는 매우 중요한 역할을 맡고 있다.
 
 ### 기획재정위원회(기재위)
 기획재정위원회는 기획재정부와 그 하부조직인 국세청, 관세청, 조달청, 통계청 등과 관련된 사항을 논의한다. 한국 기획재정부(기재부)는 상관인 국무총리보다도 더 많은 권력을 가진 실세로 평가받는다. 기재부는 행정부 전체 예산, 조세, 거시경제정책과 국제금융 대응(환율관리 등)을 총괄하는데, 이 때문에 기재부의 태도에 따라 국가 전체의 산업, 복지, 외교, 행정, 인권, 토지개발, 불평등 수준 등이 좌우되기 때문이다. 특히나 행정부가 국회에 제출하는 예산안은 기재부가 작성하므로, 행정부 각 부처의 입장에서는 어떤 사업을 제대로 시행하려면 기재부의 ‘허락’을 받아서 예산을 편성해야 국회에서 논의라도 해볼 수 있다. 예를 들어 여성가족부가 성폭력 피해자 지원센터를 만들더라도 기재부가 충분한 예산을 배정하지 않는다면, 지원센터로 쏟아지는 피해자들의 전화에 응대할 인력조차 마련할 수 없을 것이다.
@@ -95,9 +129,9 @@
 기재부의 영향력이 워낙 큰 만큼, 기재위에서 기재부의 정책 태도를 토론하는 것은 매우 중요한 일이다. 어떤 세목을 추가(종합부동산세, 탄소세, 부유세, 구글세 등)하거나 세율을 조정하는 일, 중앙정부 재정지출 규모를 확대하거나 축소하는 일, 특정 계층이나 산업에 조세혜택을 줘서 장려하는 일, 행정부 각 부처에 예산을 배정하는 일 등이 여기에 포함된다. 이상의 내용은 대통령 임기 5년의 성패를 좌우하는 경제정책으로 언론의 주목을 받으므로, 기재위 소속 의원들은 기재위의 각종 정책과 업무를 비판하거나 이를 방어하는 토론을 함으로서 이름을 알리기 쉽다. 
 
 ### 행정안전위원회(행안위) #1
-당신이 공무원에게 혐오감정 - “머리는 굳었고 일은 제대로 안 하는데 해고위험도 없는 철밥통이다 ”는 등 - 을 가지고 있다면, 욕설을 하지 말고 국회 행정안전위원회를 주목하자. 당신이 가진 혐오감정을 풀어내고 제대로 감사하고 개선하는 역할을 하는 것이 행안위이다. 
+당신이 공무원에게 혐오감정 - “머리는 굳었고 일은 제대로 안 하는데 해고위험도 없는 철밥통이다”는 등 - 을 가지고 있다면, 욕설을 하지 말고 국회 행정안전위원회를 주목하자. 당신이 가진 혐오감정을 풀어내고 제대로 감사하고 개선하는 역할을 하는 것이 행안위이다. 
 
-행안위가 담당하는 첫 번째 기관은 행정안전부와 인사혁신처다. 소관업무에는 행정부 조직구성, 공무원 임용·인사·윤리·처우 시스템, 행정업무 처리과정, 지방자치제도, 선거관리 지원 등이 포함된다. 즉 행정부와 공무원이 일하는 구조와 방식을 모두 여기서 결정한다. 여기에 추가로 “다른 중앙행정기관의 소관에 속하지 아니하는 사무 ”까지 행정안전부의 소관이므로, 행안위가 다루는 소관사무의 범위는 매우 넓다. 여기에는 전자정부시스템이나 개인정보보호 등 행정부에서 불편하기로 욕을 가장 많이 먹는 분야, 행정부의 업무를 파악할 자료가 보관되는 국가기록원 관리 등이 포함된다.
+행안위가 담당하는 첫 번째 기관은 행정안전부와 인사혁신처다. 소관업무에는 행정부 조직구성, 공무원 임용·인사·윤리·처우 시스템, 행정업무 처리과정, 지방자치제도, 선거관리 지원 등이 포함된다. 즉 행정부와 공무원이 일하는 구조와 방식을 모두 여기서 결정한다. 여기에 추가로 “다른 중앙행정기관의 소관에 속하지 아니하는 사무”까지 행정안전부의 소관이므로, 행안위가 다루는 소관사무의 범위는 매우 넓다. 여기에는 전자정부시스템이나 개인정보보호 등 행정부에서 불편하기로 욕을 가장 많이 먹는 분야, 행정부의 업무를 파악할 자료가 보관되는 국가기록원 관리 등이 포함된다.
 
 행안위가 담당하는 두 번째 기관은 전국의 각 지방정부(지방자치단체)이다. 물론 지방정부를 감시하고 견제하는 지방의회가 따로 있다. 하지만 중앙정부 재정이 지원되는 사업, 중앙정부가 지방정부에 위탁하거나 위임한 행정사무 등은 국회가 질의하고 감사할 수 있다. 광역시·도가 제시하는 정책은 차후 중앙정부 정책으로도 확대적용될 수 있고, 도지사와 시장이 좋은 평가를 받으면 대선주자급 중앙정치인으로 발돋움할 수도 있다. 그래서 국회 행안위에서는 (특히 국정감사 때) 지방정부에 대한 비판과 방어가 치열하게 진행된다.
 
@@ -111,7 +145,7 @@
 ### 국정의 주요 이슈 & 눈여겨볼 선거
 
 #### 소득주도성장
-문재인 행정부의 거시경제정책을 보통 “소득주도성장 ”이라고 일컫는다. 노동자, 특히 최저임금을 받거나 중소기업에서/1인자영업으로 일하는 노동자들의 소득을 높여서 소비여건을 진작시키고, 이를 통해 경제구조의 안정과 경기활성화를 꾀하는 것이다. 여기에는 정부주도로 최저임금을 빠르게 올리고, 근로장려금 등 소득을 보전하는 제도의 대상으로 자영업자와 프리랜서도 포함시키며, 노동시간을 단축하여 고용을 증가시키는 정책이 포함된다. 
+문재인 행정부의 거시경제정책을 보통 “소득주도성장”이라고 일컫는다. 노동자, 특히 최저임금을 받거나 중소기업에서/1인자영업으로 일하는 노동자들의 소득을 높여서 소비여건을 진작시키고, 이를 통해 경제구조의 안정과 경기활성화를 꾀하는 것이다. 여기에는 정부주도로 최저임금을 빠르게 올리고, 근로장려금 등 소득을 보전하는 제도의 대상으로 자영업자와 프리랜서도 포함시키며, 노동시간을 단축하여 고용을 증가시키는 정책이 포함된다. 
 
 소득주도성장은 정반대의 측면에서 두 가지 비판을 받고 있다. 먼저 우파의 관점에서는, 최저임금의 빠른 상승이 자영업자의 고용을 위축시켜서 소득 불평등을 더 키우고 경기가 위축될 것이라고 비판할 수 있다. 반대로 좌파의 관점에서는, 원청-하청업체로 이어지는 산업구조에서 발생하는 빈부격차, 또는 만성적 인력부족에 시달리는 공공부분(경찰, 소방, 의료 등)의 고용문제와 같은 근본적 문제를 외면하는 임시방편이라고 비판할 수 있다. 현재 문재인 행정부의 기조는 우파의 관점을 수용하는 방향으로 가고 있다. 2019년 들어 최저임금 인상폭이 크게 줄어들고, 노동시간 단축의 예외대상이 되는 기업/산업이 계속 추가되고 있다.
 
@@ -129,7 +163,7 @@
 #### 자, 예산안 게임을 시작하지
 국회에서는 매년 11~ 12월마다 예산안 통과를 놓고 정당 차원의 줄다리기를 한다. 집권당은 1월이 넘어가기 전에 예산안을 반드시 통과시키려고 하고, 다른 당들은 이를 협상카드로 삼아서 자신들이 요구하는 특정 법안을 통과시키거나 특정 정책 예산을 증액/삭감하도록 요구하기 때문이다. 과거 국회에서는 예산안 협상에서 파워를 발휘할 정도로 규모가 큰 정당이 2개(민주당계 정당과 보수주류 정당) 뿐이었으므로 이 협상과 갈등이 매우 길어졌다. 
 
-그러나 2016-20년 국회는 예산안 합의에 참여할 수 있는 15~ 40여 석 규모의 제3정당(국민의당, 바른정당, 바른미래당, 민주평화당, 대안신당 등)이 등장해서, 협상을 통해 각 당이 연합하여 안정적인 과반수 동의를 만들곤 했다. 2019년도 예산안이 더불어민주당-자유한국당의 동의로 통과되었고, 2020년도 예산안은 더불어민주당-바른미래당-대안신당-민주평화당-정의당의 동의로 통과되었다. 이 과정을 거쳐 `예산이 그나마 빠르게 통과되는(2016-20 국회에서 예산안 처리가 매해 12월 10일을 넘긴 적은 없었다. 반대로, 2012-16 국회에서는 2013, 2014년도 예산안이 각각 연도를 넘겨서 1월 1일에 통과되었다.)` 유의미한 기록을 남겼다. 2020년 총선 이후 구성될 국회가 예산안을 협상하고 통과시키는 과정 역시, 각 정당 의석수에 따른 국회 구성에 따라 영향을 많이 받을 것이다.
+그러나 2016-20년 국회는 예산안 합의에 참여할 수 있는 15~ 40여 석 규모의 제3정당(국민의당, 바른정당, 바른미래당, 민주평화당, 대안신당 등)이 등장해서, 협상을 통해 각 당이 연합하여 안정적인 과반수 동의를 만들곤 했다. 2019년도 예산안이 더불어민주당-자유한국당의 동의로 통과되었고, 2020년도 예산안은 더불어민주당-바른미래당-대안신당-민주평화당-정의당의 동의로 통과되었다. 이 과정을 거쳐 `예산이 그나마 빠르게 통과되는(2016-2020 국회에서 예산안 처리가 매해 12월 10일을 넘긴 적은 없었다. 반대로, 2012-16 국회에서는 2013, 2014년도 예산안이 각각 연도를 넘겨서 1월 1일에 통과되었다.)` 유의미한 기록을 남겼다. 2020년 총선 이후 구성될 국회가 예산안을 협상하고 통과시키는 과정 역시, 각 정당 의석수에 따른 국회 구성에 따라 영향을 많이 받을 것이다.
 
 #### 내 난방비! 내 마스크!
 앞서 말했듯 중앙정부의 1년 예산은 500조 원에 이르고, 이를 전부 꼼꼼히 검토하고 토론하는 것은 300명 뿐인 의원들에게 물리적으로 불가능하다. 따라서 예산심사 과정에서 몇십 초 안에 검토를 끝내고 정리하거나, 각 정당 지도부의 정치협상 과정에서 여러 쟁점법안과 함께 묶어서 합의처리하는 내용이 상당히 많다. 문제는, 이 과정에서 전혀 예상치 못한 엉뚱한 예산삭감이 일어난다는 점이다. 삭감된 예산에 대한 비판은 예산안이 국회를 통과하는 12월 말 ~  1월 초에 
