--- a/04_위원회와 주요 이슈(2).md
+++ b/04_위원회와 주요 이슈(2).md
@@ -10,18 +10,27 @@
 행정부의 다른 부처들 입장에서, 국가인권위원회와 국민권익위원회는 자신의 업무에 '사사건건 간섭하는' 골치아픈 부서처럼 여겨진다. 게다가 두 위원회의 권고는 말 그대로 강제력 없는 권고일 뿐이라서, 두 위원회의 위상과 권한에 확실하게 힘이 실리지 않으면 행정부 각 부처가 이들을 무시하고 두 위원회의 존재가 유명무실해질 위험이 크다. 이를 막기 위한 국회의 역할이 중요하다. 운영위와 정무위는 국가인권위원회/국민권익위원회의 업무가 정부의 다른 부처에 의해 침해되거나, 이들의 권고가 합당한 이유 없이 계속해서 무시되지 않도록 감사하고, 조사에 필요한 인력과 예산이 충분히 배정되도록 하는 역할을 맡는다. 
 
 ### 보건복지위원회(복지위) #1
-보건복지위원회는 보건복지부와 식품의약품안전처, 즉 중앙정부가 집행하는 보건위생 및 복지정책을 모두 다룬다. 여기에는 건강보험과 국민연금을 비롯한 공적연금, 병원-보건소로 구성된 공공/사립의료체계와 의사·간호사·약사의 처우, 영유아 보육과 어린이집 관리, 노인과 장애인의 복지 및 생활지원정책 등이 모두 포함되어, 사회경제적 취약계층의 의료와 생활에 직접 연관된 사항 전반을 다룬다.  
-### 환경노동위원회(환노위) #1
-모든 시민이 곧 일하는 노동자이기 때문에, 노동 문제는 곧 모든 시민의 권리와 복리후생을 결정하게 된다. 
-### 여성가족위원회(여가위) #1
+보건복지위원회는 보건복지부와 식품의약품안전처, 즉 중앙정부가 집행하는 보건위생 및 복지정책을 모두 다룬다. 여기에는 건강보험과 국민연금을 비롯한 공적연금, 병원-보건소로 구성된 공공/사립의료체계와 의사·간호사·약사의 처우, 영유아 보육과 어린이집 관리, 노인과 장애인의 복지 및 생활지원정책 등이 모두 포함되어, 사회경제적 취약계층의 의료와 생활에 직접 연관된 사항 전반을 다룬다. 복리후생과 관련하여 정부가 직접 자본, 인력, 시설 등의 투자를 도맡아야 하는 분야가 다 몰려있다. 
 
-한다면, 한국 사회는 생활공동체의 
+그런 점에서 복지위는 자본주의와 사회주의적 관점에서 정치적, 경제적, 사회적 철학이 정면으로 맞서는 배틀그라운드가 된다. 개인의 권리와 복리후생을 지키는 데에 반드시 자원투자가 필요한 사업에서, '국가와 사회의 역할이 어디까지인가? 개인이 감당할 영역은 어디까지인가?' '개인의 자원을 개인이 필요할 때 알아서 쓰게 할 것인가? 개인의 자원을 조금씩 모아 사회 공동체 차원에서 대응하게 할 것인가?' 이렇게 두 가지 질문이 충돌하기 때문이다. 예를 들어보자. 개인이 원하는 만큼 돈을 들여서 본인이 원하는 고급 의료진과 고급 의료시설을 직접 선택할 수 있는 체계를 만들 것인가? 아니면 평균 수준의 의료시설을 의료보험을 통해 모든 사람들이 값싼 비용으로 이용할 수 있는 체계를 만들 것인가? 둘 다 하면 좋겠지만, 자본과 인력이 제한된 상태에서 한 쪽을 택하면 다른 한 쪽이 축소될 수 밖에 없다. `모두 조금씩 세금을 더 내서 자원을 늘리기 전까지는(3권 ‘위원회와 주요 이슈(1)’, p.XXX 참고)` 이 중 하나의 방향성을 정해야 한다. 
+
+### 환경노동위원회(환노위) #1
+환경노동위원회는 그 중요성에 비해 국회에서 찬밥 신세를 면치 못하고 있다. 모든 시민은 곧 일하는 노동자이고, 또한 같은 자연환경을 공유하며 살아가는 생명체이다. 따라서 노동문제와 환경문제는 곧 모든 시민의 권리보장과 복리후생 수준을 결정하게 된다. 하지만 그런 중요한 문제를 처리하는 환노위는 국회 상임위원회 중에서 정보위원회 다음으로 가장 작은 규모(최대 정원 16명)를 가지고 있으며, 그나마도 전혀 다른 분야의 전문성이 필요한 환경과 노동문제를 동시에 다루므로 격무에 시달리고 꼼꼼하게 논의하기 어렵게 된다. 환노위를 통해 드러나는 문제들은 노동 및 환경문제 중에서도 가장 심각한 일부 사례에 불과할 수 있다.
+
+여하튼, 고용노동부와 환경부가 소관하는 사무는 환노위가 담당하게 된다. 그 중요성을 확인하기 위해, 두 부처의 역할을 간단하게만 살펴보자. 임금체계, 노동시간, 직업교육 및 고용촉진, 실직자의 구제, 부당해고나 노동조합 탄압 등의 감시, 산업재해 예방과 치료와 피해보상, 그 외 사업장의 노동기준 준수여부 관리감독(이상 고용노동부). 상수도/하수도 및 하천 수질관리, 대기오염물질 및 미세먼지 관리, 폐기물 및 유해화학물질 처리, 기후위기 대응을 위한 온실가스 감축, 위의 사항을 준수하지 않는 기업 적발 및 관리감독(이상 환경부). 그리고 환경부 산하 기상청의 날씨 예측과 태풍/지진 관측 업무까지. 다시 말한다. 이들 사항을 모두 토론하고 심사하고 확인하는 일을 담당하는 국회의원은 불과 16명이다.
+
+### 여성가족위원회(여가위) #1
+공화정이 처음 들어설 때 제안된 '천부인권'이 국가권력과 자본권력으로부터 개인을 지키는 개념이었다면, 최근에는 개인이 일상생활에서 남들과 다름없이 평안하게 살아가는 것이 인권의 중요한 요소가 되고 있다. 이 점에서 주목받고 있는 대상이 바로 성별과 가족이다. 성별에 의한 사회경제적/심리적/육체적 차별과 그에 따른 불평등, 제도가 보호하지 못하는 `LGBTQ+(레즈비언, 게이, 바이섹슈얼, 트랜스젠더/트랜스섹슈얼, 퀴어/정체성 고민 중, '그 외 성정체성' 등.)`로 표현되는 성소수자의 생활 속 권리, "정상적인 가족형태"라고 일컬어지는 결혼/출생(출산)/양육 등과 무관한 생활공동체의 보호 등 여러가지 문제가 빠른 속도로 중요한 이슈로 떠오르고 있다. 생활 속에서의 다양한 차별사례나 보호받지 못하는 사례를 발견하고 개선해야만, 국가의 존재 가치를 입증하고 사회의 파편화를 막을 수 있기 때문이다. 이 문제는 특히 (가족을 비롯한) 생활공동체를 새로 만들고 노동에 참여하기 시작한 20-30대 도시생활자에게, 앞으로의 직업과 생활형태를 영구히 결정할 수도 있는 매우 중요한 문제이다. 
+
+그렇기 때문에, 아직 의회와 행정부에서 거의 주목받지 못하고 있지만, 여성가족위원회와 여성가족부(행정부)의 역할과 논의가 매우 중요하다('여성'이라는 단어가 정 그렇게 싫다면, 단어를 '성별'이라고 바꾸고 생각하자). 대부분의 행정기관이 행정부 안에서의 업무에 따라 분리되어 있고, 개인과 생활공동체의 일상과 관련된 사안을 통합적·거시적으로 논의하기 가장 적절한 장소가 여가위이다. 성범죄 대응에 관한 논의는 경찰청을 담당하는 행안위에서 할 수 있고, 한부모가정의 아동교육 지원에 관한 논의는 교육위에서 할 수 있지만, 성범죄의 예방교육이나 피해지원, 또는 한부모가정이 겪는 문제에 대한 실태조사 등의 사업은 여가위에서 논의될 수 밖에 없기 때문이다.
+
+
 
 ## 외교안보, 안전, 방재 관련
 **개인이 권력을 조금씩 위임해서 공동체에 저축해놓으면, 공동체는 그 권력을 이용해 외부 위협으로부터 개인을 지켜야 한다. 그 공동체의 이름은 국가이고, 그 공동체가 권력을 잘 쓰도록 이끄는 것이 국회의 역할이다.** 
 
 ### 외교통일위원회(외통위)
-외교통일위원회는 외교부와 통일부 소관 업무를 담당한다. 그러나 안타깝게도, 행정부의 외교통일정책을 외통위에서 직접 논의하는 경우는 찾기 힘들다. 외교, 통일 등 '외치' 분야에 있어서, 의회에서 오랫동안 큰 정책방향을 토론하고 행정부에 적용하는 것이 아니라, 행정부의 수반인 대통령이 외교부 관료나 대통령비서실과 국가안보실의 관련 보좌관과 함께 정책을 짜서 그대로 추진하는 경우가 많기 때문이다. 외교통일정책에 있어서 자신들의 영향력이 별로 없다는 것을 국회의원들도 잘 알고 있다. 국회에서 외교통일 정책에 대한 질의는 새로운 외교현안에 대한 논의보다는, 행정부 외교통일 정책을 비평하는 수준에 머무르고 있으며, 질의의 내용도 대중적인 관심을 받기 좋은 대북, 대미, 대일, 대중외교에 치우쳐있다. 한국이 강소국으로서 유럽, 남미, 동남아시아, 아프리카 등과 교류하는 문제는 거의 거론되지 않으며, 정무적 차원에서 외교문제를 잘 다루는 의회정치인이 등장하지 않는 데에는 이런 배경이 있다. 
+외교통일위원회는 외교부와 통일부 소관 업무를 담당한다. 그러나 안타깝게도, 행정부의 외교통일정책을 외통위에서 직접 논의하는 경우는 찾기 힘들다. 외교, 통일 등 '외치' 분야에 있어서, 의회에서 오랫동안 큰 정책방향을 토론하고 행정부에 적용하는 것이 아니라, 행정부의 수반인 대통령이 외교부 관료나 대통령비서실과 국가안보실의 관련 보좌관과 함께 정책을 짜서 그대로 추진하는 경우가 많기 때문이다. 외교통일정책에 있어서 자신들의 영향력이 별로 없다는 것을 국회의원들도 잘 알고 있다. 국회에서 외교통일 정책에 대한 질의는 새로운 외교현안에 대한 논의보다는, 행정부 외교통일 정책을 비평하는 수준에 머무르고 있으며, 질의의 내용도 대중적인 관심을 받기 좋은 대북, 대미, 대일, 대중외교에 치우쳐있다. 한국이 강소국으로서 유럽, 남미, 동남아시아, 아프리카 등 타 권역과 교류하는 문제는 거의 거론되지 않으며, 정무적 차원에서 외교문제를 잘 다루는 의회정치인이 등장하지 않는 데에는 이런 배경이 있다. 
 
 이런 현실에서, 외통위는 주로 행정처리기관으로서의 외교부와 통일부에 대한 감사 역할을 맡게 된다. 각국 대사관/공사관의 업무, 개성공단 등 남북교류 사업에서의 민원성 업무처리문제 등이 국정감사에서 주로 논의된다. 사실 이 문제는 단순한 민원처리 수준을 넘어선다. 외국 사법부에 의해 한국 국민이 부당한 감옥살이 또는 인권침해를 겪는다던가, 한국 국민의 신체와 재산이 억류되는 상황이 논의되기 때문이다. 이런 문제가 외교부나 통일부의 관심을 충분히 받지 못해서 제대로 해결되지 못할 때, 외통위의 국정감사에서 논의되는 것은 문제해결을 위해 큰 도움이 된다. 
 
@@ -38,22 +47,18 @@
 정말이다. 정보위는 베일에 쌓인 위원회다. <국회법>에 의해 정보위의 소속 의원은 12명으로 제한되고, (인사청문회와 공청회를 제외한) 모든 회의는 비공개로 하도록 규정되었다. 정보위 회의의 대부분은 국가정보원장이 출석하여 정보위 위원들에게 국정원이 조사한 각종 정보를 보고하는 내용으로 채워질 것으로 ‘추정’되며, 위원장과 각 정당 간사들은 보고받은 내용을 추려서 회의 직후 기자들에게 공개할 따름이다. 따라서 국정원의 구조와 업무를 규정하는 법률을 바꾸거나, 국정원을 감독하고 예산을 심사하는 등의 일은 거의 공개되지 않는다. 어떤 일을 하는지 분명하지 않(으며, 어쩌면 실제 업무가 거의 없을 지도 모르)은 정보위이다보니, 정보위는 소속 위원이 다른 상임위원회 위원도 겸직할 수 있는 ‘겸임 상임위원회’로 규정되어 있다.
 
 ### 행정안전위원회(행안위) #2
-행정안전위원회의 소관사항에는 시민에게 가장 가까이 있는 중앙관청들도 포함된다. 바로 경찰청과 소방청이다. 이들 관청의 구조, 이들에게 배정되는 인력과 예산은 모두 행정안전위원회의 
-
-범죄 및 재난현장에 가장 먼저 출동하고, 조사(수사) 및 수습처리 과정의 최일선에서 근무하는 경찰 및 소방관의 처우와 관련
+행정안전위원회의 소관사항에는 시민에게 가장 가까이 있는 중앙관청들도 포함된다. 바로 경찰청과 소방청이다. 범죄와 재난사고 상황을 예방하고, 범죄와 재난이 발생했을 때 현장에서 바로 대응해야 하는 역할을 잘 수행하는지, 현장의 경찰관과 소방관에게 충분한 자원과 장비를 지원하고 있는지, 처우는 합당한지 등등의 이야기가 논의된다. 경찰의 경우 여기에 추가로, 경찰 공권력이 과도하게 또는 잘못 사용되어 생기는 피해에 대한 논의도 행안위에서 진행된다. 
 
 ### 보건복지위원회(복지위) #2
-코로나바이러스감염증-19는 의료보건 문제가 그 자체로 거대한 재난이 될 수도 있다는 교훈을 한국 사회에 심어주었다. 감염병 뿐만 아니라 각종 재난, 재해, 대형사고 상황에서 공공의료보건이 얼마나 잘 작동하느냐에 따라 개인과 국가에 미치는 피해 규모를 크게 줄일수도, 늘일수도 있다.
+코로나바이러스감염증-19는 의료보건 문제가 그 자체로 거대한 재난이 될 수도 있다는 교훈을 한국 사회에 심어주었다. 감염병 뿐만 아니라 각종 재난재해, 대형사고 상황에서 공공의료보건이 얼마나 잘 작동하느냐에 따라 개인과 국가에 미치는 피해 규모를 크게 줄일수도, 늘일수도 있다. 동네 병의원부터 대형 종합병원에 이르기까지의 의료전달체계, 환자 이송체계, 백신을 비롯한 의약품의 생산 및 비축관리, 환자 동선추적과 방역작업 관리, 거점 병원과 공공의료 종사자(의사, 간호사 등)의 업무분배와 처우 등의 문제가 모두 이와 연관된다. 이런 체계를 진단하고 법률을 통해 지원하는 것이 복지위의 역할이다.
 
-공공의료체계의 구조는 대부분 법률로 규정된다. 보건
-
-그 외에도, 식품의약품안전처. 2010년대 중후반을 뒤흔든 가습기살균제에 의한 피해는 
+의료 문제 뿐만 아니다. 식품, 의약품 등 생활에서 쓰이는 화합물의 안전성을 검증하는 식품의약품안전처(식약처) 역시 복지위의 소관기관이다. 식약처의 문제가 대형 재난으로 번질 수 있다는 것은, 2010년대 중후반을 뒤흔든 가습기살균제에 의한 호흡기 피해사례를 복기하면 바로 알 수 있다.
 
 ### 환경노동위원회(환노위) #2
 개인에게 닥쳐오는 재해의 상당 부분이 개인의 일터와 관련이 있다. 제조업이나 건설업과 같은 전통적인 노동현장에서 추락, 절단, 독성물질 누출 사고. 사무실에서 일하는 직업에서 나타나는 과로사, 정신건강 손상. 도시 시스템을 유지하는데 필수적인 일터에서의 교통사고, 근골격계 손상, (자유로운 화장실 사용이 불가능함에 따른) 배뇨기관 손상 등등. 뿐만 아니라, 일터에서 환경규제를 지키지 않고 각종 독성물질을 하수나 배기가스, 산업쓰레기의 형태로 배출할 때에도 국가적인 재해가 될 수 있다(전국 각지에서 방사성 라돈이 사용된 제품이 적발되었던 것을 기억해 보자). 이런 재해가 일어나지 않도록 사전에 예방하려면, 법률을 통해 안전한 일터를 만드는 각종 노동규제와 환경규제를 보강하고 처벌규정을 강화하며, 노동부, 노동청이 제대로 일하도록 감사하는 역할을 환경노동위원회가 맡아야 한다. 
 
 ### 여성가족위원회(여가위) #2
-한국 시민의 많은 생활이 여전히 가족단위에서 이뤄지므로, 개인의 생활이 안전해지기 위해 행정부가 가족정책에 개입할 부분이 많다. 예를 들어, 전통적으로 '가족' 영역에 속하지 않아 안전에 취약해지는 계층(가출 청소년이나 가출한 가족구성원, 동거하지만 결혼할 권리를 보장받지 못하는 동성커플이나 노년커플 등)을 보호할 제도나 시설을 확충해야 하고, 가족 내에서 학대받은 피해자가 탈출하여 보호받을 시설을 만들고 가해자의 양육권을 박탈하는 조치가 필요하다. 이상의 행정을 지휘하고 제도를 도입하는 중앙행정부처가 바로 여성가족부고, 국회 안에서 이런 문제를 논의하는 곳이 여성가족위원회다. 특히 2010년대부터 성폭력이나 불법촬영물 피해 등 개인에게 심각한 재해가 되는 성범죄 문제가 부각되는 상황에서, 여가위는 '방재 및 재난피해지원' 차원에서 끓어오르는 사회적 요구를 심도있게 논의할 수 있는 공간이다.
+개인의 생활이 안전해지기 위해 행정부가 가족정책에 개입할 부분이 많다. 예를 들어, 전통적으로 '가족' 영역에 속하지 않아 안전에 취약해지는 계층(가출 청소년이나 가출한 가족구성원, 동거하지만 결혼할 권리를 보장받지 못하는 동성커플이나 노년커플 등)을 보호할 제도나 시설을 확충해야 하고, 가족 내에서 학대받은 피해자가 탈출하여 보호받을 시설을 만들고 가해자의 양육권을 박탈하는 조치가 필요하다. 이상의 행정을 지휘하고 제도를 도입하는 중앙행정부처가 바로 여성가족부고, 국회 안에서 이런 문제를 논의하는 곳이 여성가족위원회다. 특히 2010년대부터 성폭력이나 불법촬영물 피해 등 개인에게 심각한 재해가 되는 성범죄 문제가 부각되는 상황에서, 여가위는 '방재 및 재난피해지원' 차원에서 끓어오르는 사회적 요구를 심도있게 논의할 수 있는 공간이다.
 
 #### 서울 강동구 갑: 진선미
 
@@ -63,17 +68,38 @@
 **활기있는 사회는 부유함 만으로 이룰 수 없다. 배우고, 가르치고, 즐기고, 통찰하고, 상상하여, 사회 전반의 이성과 감성과 신체를 일깨워야 한다. 이런 작업에 국가 예산과 행정력이 투입되어야 한다. 당장은 쓸모없어 보이더라도.**
 
 ### 교육위원회(교육위)
-유치원, 초등학교, 중학교, 고등학교, 대학교, 대학원, 평생교육과 관련된
+교육위원회는 교육부가 담당하는 유치원, 초등학교, 중학교, 고등학교, 대학교, 대학원, 직업교육, 평생교육과 관련된 사항을 논의한다. 이것을 '교육정책'이라는 한 단어로 퉁치는 것은 너무 가벼운 일이다.  한국의 엘리트 지배계급은 (공)교육사업이 장래 경제문제와 사회문제 등 나라의 근간을 좌우하는 중요한 문제라고 취급한다. 한편으로 공교육은 학생과 보호자의 욕망과 경쟁심이 이글거리는 장이기도 하다. 또 한편으로는 학교에 다니는 청소년들의 생활 공간을 다루고, 교육을 받고 교육을 제공하는 성인 학생, (교사와 연구원 등) 노동자들의 커뮤니티이자 일터를 다룸으로서 사람들의 삶에 큰 영향을 끼치는 영역이다. 한국 사회에서 공교육이 가지는 의미는 이처럼 거대해서, `1년에 72조 5천억 원, 전체 국가재정의 14.1%(2020년도 예산안 기준)`를 투입하는 거대한 사업이다. 한편으로는 입시부정이나 사학의 비리운영과 같은 감사할 구멍도 많고, 또 한편으로는 아무리 잘 굴러가더라도 모두를 만족시킬 수 없는 아주 난해한 사업이기도 하지만.
+
+교육위는 지역구 국회의원들이 들어가기 선호하는 위원회 중 하나다. 지역 내 교육시설이나 교육관련 예산을 유치하는 것이 지역구에서 다시 당선되는 데에 중요한 역할을 하기 때문이다(배정된 예산이 많다는 것은 따올 수 있는 예산이 많다는 의미이기도 하다). 특히 2010년대 초까지 특수목적고등학교나 자립형/자율형사립고 유치 열풍이 불었을 때, 교육위 소속 국회의원들은 이러한 고등학교의 설립/전환을 최종 인가하는 교육부를 직접 상대할 수 있었다. 이것은 현재에도 대학교 시설 또는 분교 유치, 도서관 유치와 같은 지역사업의 형태로 지속되고 있다. 
 
 
+### 과학기술정보방송통신위원회(과방위) #1
+과학기술정보방송통신위원회가 담당하는 중앙정부 부처 중에서, 교육/문화/학문 관련 부처는 과학기술정보통신부(이하 '과기정통부')와와 방송통신위원회(이하 '방통위')가 있다. 도대체 어떤 연관성을 가지고 뭉친 것인지 알기 어려운 복잡한 이름이 담긴 사연을 알아보자. 
 
-### 과학기술정보방송통신위원회(과기정통위) #1
+먼저, 과방위는 자연과학 및 기술 연구 관련 정책사항을 담당한다. 한국에서 이뤄지는 자연과학 연구는 대부분 정부출연연구기관이나 정부의 연구비 지원사업에 절대적으로 의존하고 있으며, 기술공학 분야에서도 그 비중이 상당하다. 따라서 과방위에서 논의되는 자연과학 및 기술 연구 관련 정책은 학계 연구 프로젝트의 지속성과 향후 방향성을 결정하는 중요한 요소가 된다. 특히 정부가 직접 고용하는 연구원의 처우, 정부가 투입하는 연구예산의 중장기적 활용 문제는 자연과학 및 기술 연구계에서 매번 예의주시하는 문제이다. 
+
+두 번째로, 과방위는 방송산업(특히 공영방송)의 관리와 방송-인터넷 심의규제 관련 정책사항을 담당한다. 방통위는 방송사의 설립 허가와 재승인 허가, KBS/MBC/EBS 운영관리 및 예산사용 등에 관여할 수 있는데, 이를 통해 방송산업 육성의 측면, 방송에서 보도나 시사교양 등 언론으로서의 역할 측면, 방송 컨텐츠의 심의 측면 등에 영향을 줄 수 있다. 특히 KBS와 MBC라는 거대한 언론사를 다룬다는 점 때문에, 과방위가 방통위와 관련된 안건을 다룰 때에는 각 정당마다 첨예한 논쟁이 불붙기 마련이다. 
+
 ### 문화체육관광위원회(문체위)
+문화체육관광위원회는 문화체육관광부의 소관 사무를 담당한다. 미술, 음악, 문학, 연극·영화, 체육, 게임, 관광, 스포츠, 언론·출판·미디어, 한국어 언어문화 등, 문화예술 관련 활동과 산업 전반을 다루는 상당히 규모있는 위원회다. 문체위의 소관 범위는 자본이나 국가권력으로부터 독립된 채 자생하는 문화, 자본과 일자리가 연관된 산업으로서의 문화, '국가의 위상과 직결되는' 영역으로서의 문화를 모두 포괄한다. 게다가 '문화계'라고 하나로 퉁치기에는 너무나 다양한 분야를 포괄한다(봉준호 감독과 방상훈 조선일보 사장이 나란히 문체위 회의에 출석하는 모습을 상상해보라). 따라서 문체위 소속 국회의원들은 '문화'의 어떤 영역과 속성에 주목하여 활동하느냐에 따라 평가가 극과 극으로 갈리게 된다.
+
+문체위는 두 가지 측면에서 의원들의 인기를 얻는다. 첫째는 특정 문화체육 관련 단체, 예를 들어 '대한XX협회', '대한프로XX연맹' 등의 회장직을 맡은 국회의원이 문체위에 들어가는 경우이다. 단체가 국회의원을 회장으로 초빙하여 그의 정치적 발언력을 통해 여러 문제를 해결하고자 하는 것인데, 국회의원의 입장에서도 해당 단체의 조직력과 지지가 인지도 상승에 도움이 될 것으로 기대하고 이를 수락하게 된다. 둘째로, 특정 문화체육 분야의 유명인사가 국회의원이 되어 자신의 직군을 대표하여 활동하는 경우가 있다. 2016-2020 국회의 가장 대표적인 예로, 바둑기사 조훈현이 새누리당 비례대표로 당선된 후 문체위에서 일하며 <바둑진흥법>을 대표발의하여 통과시킨 경우가 있다. 
 
 ## 산업, 통상, 환경, 에너지, 사회간접자본 관련
+**인간의 풍요로운 삶을 지탱하는 요소들은 대게 일상에서 눈에 띄지 않는 곳에 존재한다. 
+
 ### 과학기술정보방송통신위원회(과기정통위) #2
 ### 농림축산식품해양수산위원회(농축수위)
 사람들이 자주 잊곤 하지만, 농림, 축산, 수산업 역시 매우 거대하고 중요한 ‘산업’이다. 
+
 ### 산업통상자원중소벤처기업위원회(산통자위)
+이 긴 이름의 위원회가 소관하는 중앙정부 부처는 산업통상자원부와 중소벤쳐기업부이다. 산업통상자원부는 사업규제, 기술특허 등 상업·서비스업·공업·광업 전반의 육성에 관한 정책, 에너지·자원 관련정책, 무역·통상 관련정책을 총괄한다. 다만 그 중에서도 중소기업 육성, 지원, 벤처기업 창업과 관련된 부분은 중소벤처기업부가 맡고 있다. 
+산업구조가 변화하고 (기후변화가 겹쳐서) 에너지 생산구조가 변화해야 하는 
+
 ### 환경노동위원회(환노위) #3
+
+
 ### 국토교통위원회(국토위)
+국토교통위원회가 다루는 사항은 주택, 신도시 등 국토의 이용관리와 건설관련 규제, 그리고 도로, 철도, 공항 등 육로/항공 교통시설 관리업무이다. 
+
+지역구 국회의원들은 국토위에 배정되기를 선호하는 경우가 매우 많다. 아무래도 지역구 내 개발사업, 특히 교통시설을 유치하는 데에 가장 
