--- a/05_중부지방 권역.md
+++ b/05_중부지방 권역.md
@@ -7,8 +7,8 @@
 
 이 추세에 균열을 낸 요소가 2000년대에 등장한다. 하나는 (당시 기준으로) 기존 원내정당과 전혀 다른 이념정책을 내세운 사민주의 정당의 등장이고, 또 하나는 ‘정당’의 존재감을 드러낼 수 있는 비례대표 정당투표가 도입된 것이다. 두 요소가 결합된 2004년부터 사민주의 정당은 서울 지역구 선거를 뒤흔드는 변수가 되었다. 지역구에 출마하면 3~ 4%의 득표율은 기본적으로 얻고, 지역에 따라 10%대 득표율도 얻을 수 있으며, ‘신념형 정치인’이 많아서 선거에서 한 번 망하더라도 다음에 또 지역구 후보를 낼 수 있는 정당이 등장한 것이다. 거대 양당 입장에서는 일대일 구도를 벗어난 새로운 게임이 시작된 것이다. 
 
-2004년부터 서울의 지역구 선거 결과는 민주당계 정당과 사민주의 정당의 연합전선이 어떻게 짜여지느냐에 따라 격하게 변화했다. 2004년에는 노무현 대통령 탄핵 정국 속에서 “지역구 후보는 열린우리당, 정당투표는 민주노동당 ”이라는 구도로 유권자 스스로 두 당을 연합시켜서, 열린우리당의 지역구 32석(전체 48석) 획득과 민주노동당의 정당투표 13% 득표율을 만들어냈다. 반면 2008년에는 두 당의 연합이 전혀 이뤄지지 않았고 표가 분산되어, 한나라당(보수주류 정당) 후보들이 대략 48%의 득표율로 당선되는 상황이 다수 발생했다. 한나라당은 동북4구에서만 8석(전체 9석), 서울에서 40석(전체 48석)을 석권했다. 
-이 때의 충격을 잊지 못한 민주당계 정당과 사민주의 정당(민주통합당, 통합진보당)이 2012년에는 전 지역구에서 후보 단일화(’민주-진보연대’)를 해서 압승을 자신했지만, 이에 위기감을 느낀 서울 내 보수적 유권자가 새누리당(보수주류 정당)으로 집결하여 예측을 뛰어넘은 선전(16석 당선)을 거둔다. 민주당계 정당의 역습은 2016년에 이뤄지는데, 이 때는 반대로 ‘민주-진보연대’가 이뤄지지 않음에 따라 보수적인 표가 제3정당을 내세운 국민의당으로도 분산되었던 것이다. 민주당계 정당은 강남4구에서만 5석(전체 10석)을 얻으며 서울에서 35석(전체 49석)을 얻는다. 
+2004년부터 서울의 지역구 선거 결과는 민주당계 정당과 사민주의 정당의 연합전선이 어떻게 짜여지느냐에 따라 격하게 변화했다. 2004년에는 노무현 대통령 탄핵 정국 속에서 “지역구 후보는 열린우리당, 정당투표는 민주노동당”이라는 구도로 유권자 스스로 두 당을 연합시켜서, 열린우리당의 지역구 32석(전체 48석) 획득과 민주노동당의 정당투표 13% 득표율을 만들어냈다. 반면 2008년에는 두 당의 연합이 전혀 이뤄지지 않았고 표가 분산되어, 한나라당(보수주류 정당) 후보들이 대략 48%의 득표율로 당선되는 상황이 다수 발생했다. 한나라당은 동북4구에서만 8석(전체 9석), 서울에서 40석(전체 48석)을 석권했다. 
+이 때의 충격을 잊지 못한 민주당계 정당과 사민주의 정당(민주통합당, 통합진보당)이 2012년에는 전 지역구에서 후보 단일화(‘민주-진보연대’)를 해서 압승을 자신했지만, 이에 위기감을 느낀 서울 내 보수적 유권자가 새누리당(보수주류 정당)으로 집결하여 예측을 뛰어넘은 선전(16석 당선)을 거둔다. 민주당계 정당의 역습은 2016년에 이뤄지는데, 이 때는 반대로 ‘민주-진보연대’가 이뤄지지 않음에 따라 보수적인 표가 제3정당을 내세운 국민의당으로도 분산되었던 것이다. 민주당계 정당은 강남4구에서만 5석(전체 10석)을 얻으며 서울에서 35석(전체 49석)을 얻는다. 
 
 
 
@@ -65,7 +65,7 @@
 **전국구 배틀그라운드 #2**
 
 사실, 이념에 따른 정당구도가 자리잡은 이후 종로보다도 전국구로 좀 더 주목받은 지역구가 따로 있다. 2004년에 처음 설치된 노원구 병으로, 이 곳에서는 전국구 인물이 계속 당선되었다. 04년에 민주당계 정당의 4선 중진(임채정: 열린우리당), 08년에 보수주류 정당의 소장파로 알려진 언론사 사장 출신의 젊은 초선(홍정욱: 한나라당), 12년에 서울 최초의 사민주의 정당 의원(노회찬: 통합진보당-정의당), 14년(보궐선거)과 16년에 제3정당의 유력 대선후보(안철수: 무소속/국민의당)가 이 곳에서 선출되었다. 이 시기의 주요 낙선자로는 노회찬 공동대표(진보신당: 2008), 허준영 전 코레일 사장(새누리당: 2012), 이준석 최고위원(새누리당: 2016, 바른미래당: 2018)이 있는데, 이들은 선거 당시에 이미 전국구 인물이라고 평가받았다. 
-2018년 보궐선거에서 당선된 현역 의원은 지역구 역사상 가장 덜 유명한(?) 인물, 전직 재선 노원구청장(2010~ 18) 김성환이다. 그가 이번에 다시 출마한다면, 노원구 병은 총선에서 최초로 전국적인 이슈 뿐만 아니라 동네 특화 이슈를 바탕으로 선거를 치르게 될 수도 있다. 이 경우에도 민주당계 정당이 승리할 수 있을지 지켜볼 만 하다. 행정구역상 “상계동 ”이라고 일컬어지는 노원구 병은, 한강이북에서 보기 드물게 대단지 주공아파트와 학원가가 밀집하여 동네 특화 이슈가 등장하기 좋다.
+2018년 보궐선거에서 당선된 현역 의원은 지역구 역사상 가장 덜 유명한(?) 인물, 전직 재선 노원구청장(2010~ 18) 김성환이다. 그가 이번에 다시 출마한다면, 노원구 병은 총선에서 최초로 전국적인 이슈 뿐만 아니라 동네 특화 이슈를 바탕으로 선거를 치르게 될 수도 있다. 이 경우에도 민주당계 정당이 승리할 수 있을지 지켜볼 만 하다. 행정구역상 “상계동”이라고 일컬어지는 노원구 병은, 한강이북에서 보기 드물게 대단지 주공아파트와 학원가가 밀집하여 동네 특화 이슈가 등장하기 좋다.
 
 <!--##### 서울 마포구 을-->
 
@@ -94,7 +94,7 @@
 ### 인천-경기권
 **인천-경기권이 총선의 승부처인 이유는 단순히 의석수가 많기 때문이 아니다. 다양한 생활양식과 지역속성이 섞여있는, 한국 전체의 축소판과 같기 때문이다.**
 
-인천광역시와 경기도는 전국 인구의 31.3%, 전국 지역구의 28.9%(73석)를 차지하는 전국에서 가장 큰 권역이다. 게다가 이 곳을 모두 “서울에 인접했다 ” 정도로 퉁쳐서 말할 수도 없는 노릇이다. 각 도시가 자체적으로 대형 제조업 공업단지나 첨단지식산업단지를 갖추어서 그 자체로 생활권을 이루는 대도시도 많고, 서울을 비롯한 근교 대도시의 베드타운 역할을 하는 도시도 많으며, 농축산업이나 관광, 전방 군부대 등이 지역경제에서 차지하는 비중이 훨씬 큰 지역도 많다. 
+인천광역시와 경기도는 전국 인구의 31.3%, 전국 지역구의 28.9%(73석)를 차지하는 전국에서 가장 큰 권역이다. 게다가 이 곳을 모두 “서울에 인접했다” 정도로 퉁쳐서 말할 수도 없는 노릇이다. 각 도시가 자체적으로 대형 제조업 공업단지나 첨단지식산업단지를 갖추어서 그 자체로 생활권을 이루는 대도시도 많고, 서울을 비롯한 근교 대도시의 베드타운 역할을 하는 도시도 많으며, 농축산업이나 관광, 전방 군부대 등이 지역경제에서 차지하는 비중이 훨씬 큰 지역도 많다. 
 
 인천/경기권은 그만큼 지역마다 서로 다른 성향와 스토리를 갖췄기 때문에, 같은 수도권이라는 이유만으로 묶어서 설명하기에 가장 ‘위험’한 곳이기도 하다. 그렇기에 인천-경기권 전체를 다루는 부분에서는, 경기도 전체의 폭발적인 인구증가와 선거구도 변화의 관계에 대해서만 말해보자.
 
@@ -110,7 +110,7 @@
 인천에서 보수주류 정당이 처음으로 과반의석을 놓친 것은 2000년이다. 1997년 대선에서 민주당계 정당과 충청권 보수정당이 후보를 단일화했고, 대통령(김대중: 새정치국민회의)과 국무총리(김종필: 자유민주연합)을 배출하며 두 당의 공동정부가 구성된다. 이는 총선에서 충청권 보수정당을 지지하던 유권자가 민주당계 정당으로 이동하는 효과를 낳았는데, 소선거구제에서 ‘상대편’에 해당하는 보수주류 정당을 이기기 위함이라고 보인다. 
 2008년에 다시 보수주류 정당이 10석(한나라당 탈당 후 복당한 1석 포함)을 차지하자, 2012년부터는 민주당계 정당과 사민주의 정당이 모든 지역구에서 후보단일화를 했다. 2012년의 후보단일화는 전국적으로 이뤄졌지만, 다른 지역과 달리 인천에서는 단일화 과정에서 두 당(민주통합당, 통합진보당) 사이의 잡음이 별로 없었다. 게다가 2016년에는 두 당(더불어민주당, 정의당)이 단일화를 거부한 상황에서 인천시당 차원에서 단일화를 진행했으며, 민주당계 중도정당(국민의당)도 중앙당과 다르게 마지막까지 단일화 가능성을 타진했다. 이것이 가능했던 것은, 인천에서 두 당 후보들의 관계가 특별히 좋기 때문으로 보인다. 인천의 민주당계 정당 주요 후보들 - 송영길, 문병호, 홍영표 등 - 도 사민주의 정당 후보들과 함께 80~ 2000년대 인천의 노동운동을 조직적으로 이끈 ‘활동가 동지’의 경험이 있다. 사민주의 정당 역시 단일화를 통해 2010년에 역사상 첫 구청장(조택상: 동구, 배진교: 남동구)을 배출한 중요한 경험을 가졌다.
 
-이렇게 정치구도가 복잡하다보니 인천 유권자의 투표성향을 엄밀하게 말하기란 매우 어렵다. 굳이 따지자면, “서울과 가까우면 민주당계, 멀면 보수주류 ” 이라는 모호한 일관성 정도만 확인할 수 있다. 보수주류 정당의 중진인 `안상수(중구-동구-강화군-옹진군: 2016~ )`, `홍일표(남구 갑: 2008~ )`, `윤상현(남구 을: 2008~ )`, `황우여(연수구: 2000~ 16)`, `이학재(서구 갑: 2008~ )`는 서울과 멀리 떨어진 원도심, 도서지역(강화, 옹진), 송도/청라신도시 지역에서 당선되었다. 반면 민주당계 정당 중진인 `홍영표(부평구 을: 2009~ )`, `문병호(부평구 갑: 2004~ 08, 12~ 16)`, `송영길(계양구 을: 2000~ 10, 16~ )`은 부평, 계양 등 서울과 가까운 지역에서 당선되었다. 이런 지리적 차이는 생각보다 큰 영향을 끼치고 있다. 연수구에서만 4선을 한 황우여가 2016년에 서구 을로 지역구를 옮기자 38%의 저조한 득표율로 바로 낙선했다는 것이 이를 뒷받침한다.
+이렇게 정치구도가 복잡하다보니 인천 유권자의 투표성향을 엄밀하게 말하기란 매우 어렵다. 굳이 따지자면, “서울과 가까우면 민주당계, 멀면 보수주류” 이라는 모호한 일관성 정도만 확인할 수 있다. 보수주류 정당의 중진인 `안상수(중구-동구-강화군-옹진군: 2016~ )`, `홍일표(남구 갑: 2008~ )`, `윤상현(남구 을: 2008~ )`, `황우여(연수구: 2000~ 16)`, `이학재(서구 갑: 2008~ )`는 서울과 멀리 떨어진 원도심, 도서지역(강화, 옹진), 송도/청라신도시 지역에서 당선되었다. 반면 민주당계 정당 중진인 `홍영표(부평구 을: 2009~ )`, `문병호(부평구 갑: 2004~ 08, 12~ 16)`, `송영길(계양구 을: 2000~ 10, 16~ )`은 부평, 계양 등 서울과 가까운 지역에서 당선되었다. 이런 지리적 차이는 생각보다 큰 영향을 끼치고 있다. 연수구에서만 4선을 한 황우여가 2016년에 서구 을로 지역구를 옮기자 38%의 저조한 득표율로 바로 낙선했다는 것이 이를 뒷받침한다.
 
 
 #### 수원, 성남, 고양
@@ -122,14 +122,14 @@
 
 고양은 자연발생한 읍내가 따로따로 발전하다가 90년 1기 신도시가 개발되며 도시급으로 늦게 성장했다. 고양군 시절에는 보수주류 정당의 안정적 지지세가 유지되었으나 2000년 총선부터 서울에 출퇴근하는 중산층 유권자를 중심으로 민주당계 및 사민주의 정당에 대한 지지세로 완전히 돌아선다. 대선주자급 정치인인 `심상정(고양시 덕양구 갑: 2012~ )`, `유시민(고양시 덕양구 갑: 2003~ 08)`, `(고양시 일산구 갑: 2004~ 08)`, `최성(고양시 덕양구 을: 2004~ 08)`이 자리잡았고, ‘중산층 신도시 중진’의 무게감을 바탕으로 문재인 행정부의 장관직을 맡은 `유은혜(고양시 일산동구: 2012~ 20)`, `김현미(고양시 일산서구: 2012~ 20)`가 자리잡았다.
 
-다만 2010년대부터 세 도시 모두 과거에 비해 민주당계 및 사민주의 정당에 더 우호적으로 변한다는 공통점이 있다. 성남 분당에서 손학규(성남시 분당구 을: 2011~ 12)가 승리한 2011년 보궐선거, 민주당계 정당(더불어민주당)이 성남 분당(갑/을)과 수원 팔달구(수원시 병)가 모두 승리한 2016년 총선 등, 보수주류 정당의 다선 의원이 나온 지역구에서 민주당계 정당이 연이어 승리하고 있다. 이것은 민주당계 정당이 시간이 지나면서 “수도권, 대도시의 지지를 받는 보수정당 ”으로 자리잡는 과정일 수도 있다. 
+다만 2010년대부터 세 도시 모두 과거에 비해 민주당계 및 사민주의 정당에 더 우호적으로 변한다는 공통점이 있다. 성남 분당에서 손학규(성남시 분당구 을: 2011~ 12)가 승리한 2011년 보궐선거, 민주당계 정당(더불어민주당)이 성남 분당(갑/을)과 수원 팔달구(수원시 병)가 모두 승리한 2016년 총선 등, 보수주류 정당의 다선 의원이 나온 지역구에서 민주당계 정당이 연이어 승리하고 있다. 이것은 민주당계 정당이 시간이 지나면서 “수도권, 대도시의 지지를 받는 보수정당”으로 자리잡는 과정일 수도 있다. 
 
 #### 서울 서남부 인접 위성도시
-지금 이 파트에서 설명하는 “서울 서남부 인접 위성도시 ”는 인천과 서울의 공업지대 사이에 위치하며 배드타운으로 성장한 부천, 안양, 광명, 군포, 시흥 등을 묶은 표현이다. 30~ 80만 인구를 차지하는 각 도시를 합치면, 대구광역시의 절반 정도 되는 면적 안에 대구를 살짝 뛰어넘는 숫자의 인구(약 250만 명)를 가진 인구 초밀집 권역이 된다. 이 권역은 1990년대의 수도권 1기 신도시 사업으로 대단지 아파트가 들어서면서 인구가 폭발적으로 늘어났다. 하지만 이 권역의 정치사를 알기 위해서는, 이 지역에서 신도시보다 더 일찍 조성되었던 1960~ 70년대 주거지의 역사를 알아야 한다.
+지금 이 파트에서 설명하는 “서울 서남부 인접 위성도시”는 인천과 서울의 공업지대 사이에 위치하며 배드타운으로 성장한 부천, 안양, 광명, 군포, 시흥 등을 묶은 표현이다. 30~ 80만 인구를 차지하는 각 도시를 합치면, 대구광역시의 절반 정도 되는 면적 안에 대구를 살짝 뛰어넘는 숫자의 인구(약 250만 명)를 가진 인구 초밀집 권역이 된다. 이 권역은 1990년대의 수도권 1기 신도시 사업으로 대단지 아파트가 들어서면서 인구가 폭발적으로 늘어났다. 하지만 이 권역의 정치사를 알기 위해서는, 이 지역에서 신도시보다 더 일찍 조성되었던 1960~ 70년대 주거지의 역사를 알아야 한다.
 
 서울 서남부 인접권역은 일제시대 때에 이미 경성과 인천으로 이어지는 도로망을 갖추어 읍내가 발전한 곳이다. 그러나 60년대 이후 공업도시로서 서울(특히 구로-영등포)과 인천(특히 부평)이 발전하면서 이 권역의 성격이 바뀐다. 공장의 일자리를 찾아 수도권으로 이주했지만 포화된 서울과 인천에 들어가지 못한 사람들, 또는 중앙정부 주도로 진행된 서울 도시정비사업으로 강제로 쫓겨난 사람들이 발생하기 시작했다. 서울 서남부 인접권역은 이들이 정착할 수 있는 몇 안되는 거주지역이었다. 당시 중앙정부는 없는 경제자원을 쥐어짜서 서울, 부산 등 폭발적으로 커지는 대도시의 생활인프라를 확충하는 것만으로도 벅찼고, 지방자치는 시행되지 않아서 도시가 자체적으로 시설확충을 꾀할 수도 없었다. 결국 중앙정부가 작정하고 신도시를 개발하기 전까지, 이 권역은 불균형한 경제발전의 문제점을 도시노동자가 생활 곳곳에서 온몸으로 떠안아야 하는 현장이 되었다.
 
-이 배경을 감안하면, 서울 서남부 인접권역은 노동운동, 빈민운동 등의 재야 시민운동 출신 정치인이 크게 활약했을 것임을 추측할 수 있다. 이를 가장 잘 대변하는, 1990년대부터 이 지역에서 중견 정치인으로 활동한 네 명의 의원을 꼽아보자. 1970년대 청계천/왕십리 판자촌의 빈민운동에 투신하여 정일우 신부와 함께 ‘철거민의 대부’로 불리운 `제정구(시흥시-군포시: 1992~ 99)`. 아버지가 빈민구제운동 일환으로 설립한 집단농장 “풀무원농장 ”의 공판장을 직접 운영해 유기농 식품기업으로 성장시킨 `원혜영(부천시 오정구: 1992~ 96, 2004~ 20)`. 60년대 학생운동을 주도하다가 기독교 교단의 후원을 받으며 구로공단의 노동운동에 참여한 `손학규(광명시: 1993~ 98, 2000~ 02)`. 노동조합 조직을 위해 학생신분을 속이고 공장에 위장취업하는 운동을 선도했던 80년대 노동운동의 신화 `김문수(부천시 소사구: 1996~ 2006)`. 중견 정치인이 된 이후 그들의 사상이 극적으로 변하는 일이 없지는 않다만, 정당계열을 막론하고 이 지역의 정치인들은 이들과 함께 시민운동에 참여하거나 이들의 의정활동을 보좌하면서 정치에 입문하는 등, 재야 시민운동의 영향 아래에서 성장하였다. 
+이 배경을 감안하면, 서울 서남부 인접권역은 노동운동, 빈민운동 등의 재야 시민운동 출신 정치인이 크게 활약했을 것임을 추측할 수 있다. 이를 가장 잘 대변하는, 1990년대부터 이 지역에서 중견 정치인으로 활동한 네 명의 의원을 꼽아보자. 1970년대 청계천/왕십리 판자촌의 빈민운동에 투신하여 정일우 신부와 함께 ‘철거민의 대부’로 불리운 `제정구(시흥시-군포시: 1992~ 99)`. 아버지가 빈민구제운동 일환으로 설립한 집단농장 “풀무원농장”의 공판장을 직접 운영해 유기농 식품기업으로 성장시킨 `원혜영(부천시 오정구: 1992~ 96, 2004~ 20)`. 60년대 학생운동을 주도하다가 기독교 교단의 후원을 받으며 구로공단의 노동운동에 참여한 `손학규(광명시: 1993~ 98, 2000~ 02)`. 노동조합 조직을 위해 학생신분을 속이고 공장에 위장취업하는 운동을 선도했던 80년대 노동운동의 신화 `김문수(부천시 소사구: 1996~ 2006)`. 중견 정치인이 된 이후 그들의 사상이 극적으로 변하는 일이 없지는 않다만, 정당계열을 막론하고 이 지역의 정치인들은 이들과 함께 시민운동에 참여하거나 이들의 의정활동을 보좌하면서 정치에 입문하는 등, 재야 시민운동의 영향 아래에서 성장하였다. 
 
 #### 경기 서남부
 서해를 끼면서 시흥-안산-화성-오산-평택으로 이어지는 5개 시의 공업단지에는 중소 제조기업부터 자동차/전자계열 대기업에 이르는 다양한 공장이 즐비하다. 하지만 그 모든 영역이 공장으로만 채워져있진 않아서, 밀집된 도시(거주지)와 공단과 농촌을 번갈아 볼 수 있다. 이처럼 같은 도시 안에서도 인구밀도와 경제구조와 사람들의 계층이 다르기 때문에, 이 지역의 정치성향은 읍면동별, 선거구별로 아주 다르다. 도시나 공업지대 중에서도 밀집도가 높은 읍/동으로만 구성된 곳에서는 `조정식(시흥시 을: 2004~ )`, `김영환(안산시 상록구 갑/을: 1996~ 2004, 2009~ 16)`, `천정배(안산시 단원구 갑: 1996~ 2012)`, `안민석(오산시: 2004~ )` 등 4선씩 하는 민주당계 정당 중진들이 꾸준히 배출되었다. 반면 조금이라도 농촌의 비율이 높은 곳은 보수주류 정당의 힘이 세서,` 원유철(평택시 갑: 1996~ 2004, 08~ 20)`, `서청원(화성시 갑: 2013~ )` 같은 당내 우파에 해당하는 중진들이 자리잡곤 한다. 이 지역의 농촌은 공업지대의 존재와 무관하게 (곧 등장할) 경기도 외곽의 다른 농촌지역과 유사한 속성을 가졌다.
@@ -183,7 +183,7 @@
 
 우리가 전통적으로 알고 있는 충청·전라·경북·경남권의 표심이 `1990년대 이후의 지역주의 발현(흔한 오해와 달리, 1990년 이전에는 한국 국회의원 선거에서 지역주의가 그다지 강력하지 않았다. 그 구체적인 내용은 )`과 함께 탄생한 것과 달리, 강원도의 보수적 표심은 1950년대부터 형성되었다. 강원도는 한국전쟁의 전선이 고착화된 시기(1951~ 53) 고지전이 일상적으로 일어난 주요 전장이었고, 지형이 험해서 도시화가 쉽게 진행되지 않아서 유권자의 정치적 의견교환이 쉽지 않았다. 일반적인 농촌의 보수적 표심에 국방안보와 반공에 대한 열망까지 합쳐져서, 군사정권을 강력하게 지지하는 공간이 되었다. 1971년 총선에서 민주당계 정당(신민당, 국민당)이 경상북도(전체 24석)에서 9석이 당선되었을 그 때에도, 강원도(전체 9석)에서는 불과 1석만 확보할 수 있었다. 1선거구에서 2명(2위까지)이 당선되던 1985년 총선의 지역구 6곳에서도, 김영삼과 김대중이 참여한 신한민주당은 모두 3등 이하로 낙선했고, 보수주류 집권당(민주정의당)이 전원 1위로 당선, 1기 군사정권 출신으로 구성된 한국국민당이 4곳에서 2등으로 당선되었다. 
 
-하지만 현대까지 이어져 오는 보수적인 강원도 표심의 근원을 알기 위해서는, 정당과 관변단체의 지역조직을 알아야 한다. 이승만이 소속된 1950년대 집권당이자 보수주류 정당인 자유당은 경찰과 지방관청의 힘을 빌려, 한국에서 최초로 전국 시·군·구 단위의 지구당 조직을 완비했다. 이 조직은 단순히 당의 행사나 선전사업의 인력으로 동원하는 데에 머무르지 않고, 모든 유권자가 혈연/학연/지연을 통해 2~ 3다리만 건너면 자유당과 연결되도록 하는 일종의 득표관리조직의 역할을 한다. 이러한 관리조직은 민주공화당(박정희)과 민주정의당(전두환)까지 이어져서 현재 보수주류 정당의 강고한 지역조직으로 남아있다. 이와 유사하게 1970년대부터 90년대까지 보수주류 정당 집권 시절의 중앙정부가 나서서 `3대 관변단체(중앙정부 차원에서 별도의 “조직육성법 ” 법률을 마련한 3개 단체인 한국자유총연맹, 새마을운동중앙회, 바르게살기운동중앙협의회를 일컫는다. 이들 관변단체는 모두 중앙정부 및 지방정부로부터 보조금을 받고 시설을 무상으로 사용할 권한을 가지는데, 이 권한은 “조직육성법 ”을 통해 보장받는다.)`의 조직을 만들어서, 구·시·군, 읍·면·동, 통·반·리 단위로 보수주류 정당의 목소리를 대변하는 조직이 건설되기도 했다. 
+하지만 현대까지 이어져 오는 보수적인 강원도 표심의 근원을 알기 위해서는, 정당과 관변단체의 지역조직을 알아야 한다. 이승만이 소속된 1950년대 집권당이자 보수주류 정당인 자유당은 경찰과 지방관청의 힘을 빌려, 한국에서 최초로 전국 시·군·구 단위의 지구당 조직을 완비했다. 이 조직은 단순히 당의 행사나 선전사업의 인력으로 동원하는 데에 머무르지 않고, 모든 유권자가 혈연/학연/지연을 통해 2~ 3다리만 건너면 자유당과 연결되도록 하는 일종의 득표관리조직의 역할을 한다. 이러한 관리조직은 민주공화당(박정희)과 민주정의당(전두환)까지 이어져서 현재 보수주류 정당의 강고한 지역조직으로 남아있다. 이와 유사하게 1970년대부터 90년대까지 보수주류 정당 집권 시절의 중앙정부가 나서서 `3대 관변단체(중앙정부 차원에서 별도의 “조직육성법” 법률을 마련한 3개 단체인 한국자유총연맹, 새마을운동중앙회, 바르게살기운동중앙협의회를 일컫는다. 이들 관변단체는 모두 중앙정부 및 지방정부로부터 보조금을 받고 시설을 무상으로 사용할 권한을 가지는데, 이 권한은 “조직육성법”을 통해 보장받는다.)`의 조직을 만들어서, 구·시·군, 읍·면·동, 통·반·리 단위로 보수주류 정당의 목소리를 대변하는 조직이 건설되기도 했다. 
 
 물론 이런 조직의 힘은 전국의 모든 지역에 존재한다. 그러나 강원도처럼 산세가 험하여 다른 마을과 교류가 힘든 ‘좁은 사회’ 안에서는 조직의 힘이 특히 강하다. 다른 조직이나 자원이 접근하기 어려운 마을 안에서, 정부의 행정권력을 통해 자원을 확보한 조직은 ‘메마른 지역 안에서 가장 샘물이 풍부하게 흐르기 때문에’ 독보적인 영향력을 행사할 수 있기 때문이다. 대통령 및 강원도지사 선거처럼 도 단위로 치르는 선거에서는 그나마 이 조직의 영향이 적지만, 작은 행정구역을 중심으로 진행되는 지역구국회의원, 강원도의회, 구·시·군의 장 선거에서는 조직의 힘이 강력하다. 
 
