--- a/01_선거 개괄.md
+++ b/01_선거 개괄.md
@@ -3,13 +3,13 @@
 ## 이 책, 이렇게 읽어주세요
 <전국투표전도 2020: 국회의원 선택을 돕는 가이드북>을 읽어주셔서 감사합니다. 이 책은 2020년 4월 15일에 실시되는 제20대 국회의원 총선거와 2020년 공직 재보궐선거의 유권자를 위해 제작되었습니다. 유권자가 이번 선거에서 표심을 정하는 데 도움이 되고, 다른 지역을 포함한 전국적인 시선으로 개표 생중계를 흥미롭게 지켜보는 데 도움이 될 이야기를 다룹니다.
 
-2년 전 전국동시지방선거를 앞두고 <전국투표전도 2018>을 제작하여 여러 후원자, 구매자, 언론으로부터 큰 관심을 얻었습니다. 그때 책자를 만들기 위해 임시로 만든 프로젝트 그룹 “스튜디오 하프-보틀 ”은 이제 정식으로 활동하는 그래픽디자인 스튜디오가 되었고, 이제 스튜디오의 이름을 걸어놓은 첫 번째 독립출판물을 제작합니다. 
+2년 전 전국동시지방선거를 앞두고 <전국투표전도 2018>을 제작하여 여러 후원자, 구매자, 언론으로부터 큰 관심을 얻었습니다. 그때 책자를 만들기 위해 임시로 만든 프로젝트 그룹 “스튜디오 하프-보틀”은 이제 정식으로 활동하는 그래픽디자인 스튜디오가 되었고, 이제 스튜디오의 이름을 걸어놓은 첫 번째 독립출판물을 제작합니다. 
 
 <전국투표전도 2020>은 총 5권으로 구성됩니다. 주제/지역별로 주목할 선거구를 인포그래픽으로 다루는 내용은 이번에도 들어있습니다. 다만 지방선거를 다루기 위해 순전히 지역별로 분량을 나누었던 2년 전과 달리, <전국투표전도 2020>는 전국 단위의 중앙정치를 다루는 비중이 커졌습니다. 이번 선거는 국가 전체의 사무를 관장하는 국회의원을 뽑는 선거입니다. 따라서 개별 지역을 넘어서 전국적으로 모두에게 중요한 의제를 다루고, 그 의제를 직접 다룰 정당과 정치인이 작동하는 과정을 자세히 알아보는 데에 많은 비중을 두었습니다. 
 
 Chapter 1 _선거 개괄은 국회(의원)의 역할과 선택의 기준, 국회의원을 선출하는 과거의 제도와 올해부터 달라지는 제도, 2020년 국회의원 총선거 일정, 함께 시행되는 재보궐 공직선거의 지역구 상황을 소개합니다.
 
-Chapter 2, 3은 전국 단위의 중앙정치와 관련된 내용과 주목할 선거구를 다룹니다. “Chapter 2 _정당과 역사 ”에서는 이번 선거에 참여하는 정당에 대한 소개와 이슈를 다루고, 지금까지 국회의원 총선거 결과에 따라 정치 흐름이 어떻게 바뀌었는지 알아봅니다. “Chapter 3 _위원회와 주요 이슈 ”에서는 중앙정치와 유권자의 일상 속에서 주목할 이번 선거의 이슈를 알아봅니다. 국회에서 중요한 논의가 처리되는 단위인 “상임위원회 ”별로 살펴보아서, 유권자가 선출한 국회의원이 앞으로 어떻게 활동할 것인지 상상할 수 있도록 도와드립니다.
+Chapter 2, 3은 전국 단위의 중앙정치와 관련된 내용과 주목할 선거구를 다룹니다. “Chapter 2 _정당과 역사”에서는 이번 선거에 참여하는 정당에 대한 소개와 이슈를 다루고, 지금까지 국회의원 총선거 결과에 따라 정치 흐름이 어떻게 바뀌었는지 알아봅니다. “Chapter 3 _위원회와 주요 이슈”에서는 중앙정치와 유권자의 일상 속에서 주목할 이번 선거의 이슈를 알아봅니다. 국회에서 중요한 논의가 처리되는 단위인 “상임위원회”별로 살펴보아서, 유권자가 선출한 국회의원이 앞으로 어떻게 활동할 것인지 상상할 수 있도록 도와드립니다.
 
 Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살펴봅니다. 2016년 국회의원 총선거의 결과 인포그래픽, 지역별 총선 역사, 결과를 주목할 만한 사연이 있는 선거구를 정리했습니다. 특히 서울, 경기, 부산, 경남 등 인구가 많고 사연도 다양한 지역은 몇 개의 권역으로 더 세분화해서 알아봅니다. 무작정 1개의 권역으로 묶여서 왜곡된 분석을 하지 않도록 하기 위함입니다.
 
@@ -66,21 +66,21 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 	- 만 18세 이상의 대한민국 국적자.
 2005년부터 2019년까지 <공직선거법>은 선거권이 주어지는 나이를 만 19세로 정하고 있었으나, 2019년 12월에 국회에서 <공직선거법>이 개정되며 선거권이 주어지는 연령이 만 18세로 바뀌었다. 이에 따라 2020년 국회의원 총선거부터는 투표일 기준으로 생일이 지난 고등학교 3학년도 투표할 수 있다.  
 	
-제15조1항을 세부적으로 보면, 지역구 후보에게 투표할 권리, 비례대표 정당에게 투표할 권리가 분리되어 있다. 한국에 거주하지 않아서 주민등록이 되어있지 않은(주소지가 없는) 재외국민의 경우, ‘특정 지역구의 유권자’로 인정하기 어렵기 때문이다. 
+해당 법조항을 세부적으로 보면, 지역구 후보에게 투표할 권리, 비례대표 정당에게 투표할 권리가 분리되어 있다. 한국에 거주하지 않아서 주민등록이 되어있지 않은(주소지가 없는) 재외국민의 경우, ‘특정 지역구의 유권자’로 인정하기 어렵기 때문이다. 
 이에 따라, 한국 시민권자라도 다음에 해당하는 경우에는 지역구 후보에게는 투표할 수 없고, 비례대표 정당투표에만 참여할 수 있다. 
 	- 한국에 주민등록한 적이 없는 경우.
 	- 해외이주신고 등으로 한국 주민등록이 한번 말소된 후, 재등록하지 않은 경우.
 	- 외국의 영주권을 취득했거나 취득할 목적으로 외국에 거주하고 있고, 한국에 영주귀국을 신고하지 않았으며, 선거인명부 작성일 기준으로 한국에 주민등록한 지 3개월이 지나지 않은 경우.
-2012년부터 한국 중앙선거관리위원회(이하 ‘선관위’)는 국회의원과 대통령 선거때마다, 정해진 재외공관에서 투표소를 운영한다. 주민등록이 되어있지 않은 재외국민은 여기에서 투표할 수 있는데, 이를 위해서 “재외선거인 등록신청 ”을 해야 한다. 과거에 재외선거인으로 등록했거나, 선거일 60일 전까지 신규등록한 재외국민에게는 선거권이 주어진다. 방법에 대한 간단한 설명은 이 책의 ‘2020 국회의원 총선거 일정’ 챕터에서 설명한다. 
+2012년부터 한국 중앙선거관리위원회(이하 ‘선관위’)는 국회의원과 대통령 선거때마다, 정해진 재외공관에서 투표소를 운영한다. 주민등록이 되어있지 않은 재외국민은 여기에서 투표할 수 있는데, 이를 위해서 “재외선거인 등록신청”을 해야 한다. 과거에 재외선거인으로 등록했거나, 선거일 60일 전까지 신규등록한 재외국민에게는 선거권이 주어진다. 방법에 대한 간단한 설명은 이 책의 ‘2020 국회의원 총선거 일정’ 챕터에서 설명한다. 
 
 한편, 한국은 동아시아에서 최초로 시민권이 없는 외국인 주민에게도 지방선거(지방의회의원/지방자치단체장)에 투표할 권리가 주어진 국가이다. 하지만 국회의원과 대통령 선거에는 외국인의 선거권이 없다. 
 
 ### 피선거권
 2020년 3월 현재의 <공직선거법> 제16조2항에 의하면, 국회의원 선거에서 출마할 수 있는 피선거권자는 다음과 같이 규정되어 있다. 
 	- 만 25세 이상의 대한민국 국적자.
-이 항목에서 보듯, 대한민국 국적자는 비례대표나 지역구 어디에서든 국회의원으로 출마할 수 있다. 예를 들어, 서울특별시 종로구에 주민등록이 된 사람이라도, 부산광역시 중구-영도구 선거구의 후보로 출마할 수 있다. 이 점은 “60일 이상 ” “해당 지방자치단체의 관할구역에 주민등록이 되어 있어야 ” 피선거권이 주어지는(<공직선거법> 제16조3항) 지방선거와 다른 부분이기도 하다. 
+이 항목에서 보듯, 대한민국 국적자는 비례대표나 지역구 어디에서든 국회의원으로 출마할 수 있다. 예를 들어, 서울특별시 종로구에 주민등록이 된 사람이라도, 부산광역시 중구-영도구 선거구의 후보로 출마할 수 있다. 이 점은 “60일 이상” “해당 지방자치단체의 관할구역에 주민등록이 되어 있어야” 피선거권이 주어지는(<공직선거법> 제16조3항) 지방선거와 다른 부분이기도 하다. 
 
-그러나 경제적으로 피선거권을 실질적으로 제한하는 문제가 있으니, 바로 <공직선거법> 제56조에 따라 후보등록을 위해 선거관리위원회에 납부하는 기탁금이다. 국회의원후보는 후보등록과 함께 1,500만 원을 기탁금으로 일시불해야 하는데, 이 비용은 당선자 또는 지역구 득표율 15% 이상인 후보에게만 선거가 끝난 후 반환된다. 기탁금의 원래 취지는 장난스러운 후보등록을 막고, 불법선거운동에 대한 과태료 등을 바로바로 징수하기 위한 것이다. 그러나 이를 감안해도 1,500만 원의 비용은 너무 높아서, 고액재산을 형성하기 어려운 청년세대 정치인이나 일반 노동자/직장인, 사회/정치운동 활동가가 진지하게 출마를 고려하더라도 이내 포기하게 된다. 반대로 정치와 전혀 상관없는 직업을 통해 수십억 원대의 재산을 모은 사람이 재미삼아 하는 연쇄출마를 막기에는 턱없이 부족한 액수이다. 이러한 문제 때문에 기탁금 제도는 언제나 논란의 대상이 되었다. 중앙선관위가 2015년에 펴낸 “각 국의 선거제도 비교연구 ” 자료집에 의하면, 조사대상 22개국 중 국회의원(하원)후보 기탁금 제도가 없는 국가가 미국, 프랑스, 독일, 스웨덴 등 10개국에 이르며, 기탁금이 한화 100만 원을 넘는 국가도 일본, 말레이시아, 터키, 싱가포르 뿐이다. 
+그러나 경제적으로 피선거권을 실질적으로 제한하는 문제가 있으니, 바로 <공직선거법> 제56조에 따라 후보등록을 위해 선거관리위원회에 납부하는 기탁금이다. 국회의원후보는 후보등록과 함께 1,500만 원을 기탁금으로 일시불해야 하는데, 이 비용은 당선자 또는 지역구 득표율 15% 이상인 후보에게만 선거가 끝난 후 반환된다. 기탁금의 원래 취지는 장난스러운 후보등록을 막고, 불법선거운동에 대한 과태료 등을 바로바로 징수하기 위한 것이다. 그러나 이를 감안해도 1,500만 원의 비용은 너무 높아서, 고액재산을 형성하기 어려운 청년세대 정치인이나 일반 노동자/직장인, 사회/정치운동 활동가가 진지하게 출마를 고려하더라도 이내 포기하게 된다. 반대로 정치와 전혀 상관없는 직업을 통해 수십억 원대의 재산을 모은 사람이 재미삼아 하는 연쇄출마를 막기에는 턱없이 부족한 액수이다. 이러한 문제 때문에 기탁금 제도는 언제나 논란의 대상이 되었다. 중앙선관위가 2015년에 펴낸 “각 국의 선거제도 비교연구” 자료집에 의하면, 조사대상 22개국 중 국회의원(하원)후보 기탁금 제도가 없는 국가가 미국, 프랑스, 독일, 스웨덴 등 10개국에 이르며, 기탁금이 한화 100만 원을 넘는 국가도 일본, 말레이시아, 터키, 싱가포르 뿐이다. 
 
 한편, 선거권은 있으나 피선거권은 없는 만 18~ 24세에 대한 논의가 여전히 진행되고 있다. 만 18세부터 투표할 자격이 주어진다는 점은 곧, 그때부터는 유권자로서 정치적 판단능력이 충분하다고 인정한다는 의미이다. 그렇다면 같은 이유에서 만 18~ 24세의 시민권자가 공직에 참여하지 못하도록 막을 이유가 없으며, 투표할 권리와 동등하게 입후보와 선거운동, 공직 활동을 통해 정치적 의사를 실현할 권리를 주어야 한다는 주장이 나오고 있다. 특히 2010년대 이후 한국에서는 청년계층의 정치참여를 막는 정치문화와 선거제도에 대한 비판이 거세게 일어나고 있는데, 만 18~ 24세의 피선거권 논쟁도 같은 선상에서 일어나고 있다.
 
@@ -108,7 +108,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 한국의 비례대표 비율은 다른 국가에 비해서도 독보적으로 낮은 편이다. 현재의 <대한민국헌법>으로 처음 치뤄진 1988년 총선에서는 지역구 224석 : 비례 75석으로 비율이 3:1이었으나, 2016년 총선에서는 253:47로 약 5:1의 비율로 차이가 벌어졌다. 이런 극적인 변화는 뒤에 설명할, 국회의원 전체 숫자가 고정된 현상과도 관련이 있다. 
 ### 지역구 제도(1): 소선거구제, 단순다수제
-1988년부터 한국의 지역구 선거는 “소선거구제, 단순다수제 ”로 치뤄졌다. 지역구마다 1명의 의원이 선출되는 (지역구의 크기가 작은) 소小선거구제이고, 과반이 되지 않더라도 가장 많이 득표한 사람이 당선되는 단순다수제이다. 이 제도를 운영하는 나라에서는 보통 ‘상대편’보다 더 많이 득표할 수 있는 정당(후보)에게 표가 집중되어서, 2개의 거대한 정당을 형성하게 된다. 이는 상대적으로 소수 의견을 대변하는 3, 4위 정당(후보)를 배제하는 부정적인 효과와, 상위권 후보도 치열한 경쟁에 참여하도록 강제하는 긍정적인 효과가 함께 있다.  
+1988년부터 한국의 지역구 선거는 “소선거구제, 단순다수제”로 치뤄졌다. 지역구마다 1명의 의원이 선출되는 (지역구의 크기가 작은) 소小선거구제이고, 과반이 되지 않더라도 가장 많이 득표한 사람이 당선되는 단순다수제이다. 이 제도를 운영하는 나라에서는 보통 ‘상대편’보다 더 많이 득표할 수 있는 정당(후보)에게 표가 집중되어서, 2개의 거대한 정당을 형성하게 된다. 이는 상대적으로 소수 의견을 대변하는 3, 4위 정당(후보)를 배제하는 부정적인 효과와, 상위권 후보도 치열한 경쟁에 참여하도록 강제하는 긍정적인 효과가 함께 있다.  
 
 지역구에서는 으레 1명만 선출하는 것이 당연한 것 같으나, 정답은 ‘그렇지 않다.’ 한국에서도 1973~ 1987년에는 지역구마다 가장 많이 득표한 2명의 후보가 당선되는 중中선거구제를 시행하기도 했다. 당시는 군부독재 정권 시절이었고(유신헌법 시절의 박정희 행정부, 전두환 행정부), 집권당인 보수주류 정당이 어느 지역구에서든 적어도 2위를 차지해서 단독 과반 의석을 확보할 수 있게끔 만들어진 제도였다. 1987년 민주화 이후 새 선거제도를 도입할 때, 보수주류 정당과 민주당계 정당이 모두 대부분 지역구에서 자신이 1위를 할 것이라는 판단으로 소선거구제 도입에 동의하였다.
 
@@ -123,17 +123,17 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 국회에서 지역주의 구도가 깨지는 데에도, 지역구별 인구편차가 줄어드는 것이 일조했다. 인구가 많고 지역구도에서 상대적으로 자유로운 대도시와 수도권은 인구에 비해 지역구 개수가 상대적으로 적었는데, 선거구 인구편차가 줄어듦에 따라 인구가 많은 지역의 선거구가 늘어난 것이다. 이는 국회 안에서 지역주의에 얽매인 국회의원 비중을 줄이는 데에 일조했지만, 반대로 수도권 바깥을 대변하는 의원이 줄어들어서 지역격차는 더욱 심화시킨다는 비판이 있다.
 
 ### 비례대표 제도(1): 전국 단위 정당명부제, 성별할당
-한국 국회의 비례대표 제도는 2004년에 처음 실시되었다. 2016년까지 운영된 제도를 따라보자. 유권자가 “두 번째 투표용지 ”에서 자신이 지지하는 정당에 투표하면, 그 투표를 모아서 정당이 득표한 비율에 따라 비례대표 의석을 배분한다. 예를 들어 비례대표 의석 정원이 50석인데 A당이 정당투표에서 20%를 득표했다면, 50석의 20%인 10석의 비례대표 의원이 A당에 배정되어서 A당 비례대표 후보가 순번에 따라 1번부터 10번까지 당선된다. 유권자 입장에서는 지역구 선거와 달리 자신이 지지하는 3, 4위권의 정당에게 표를 주더라도 당선자를 배출할 수 있다는 점에서, 선택의 폭을 넓힌 제도이다.
+한국 국회의 비례대표 제도는 2004년에 처음 실시되었다. 2016년까지 운영된 제도를 따라보자. 유권자가 “두 번째 투표용지”에서 자신이 지지하는 정당에 투표하면, 그 투표를 모아서 정당이 득표한 비율에 따라 비례대표 의석을 배분한다. 예를 들어 비례대표 의석 정원이 50석인데 A당이 정당투표에서 20%를 득표했다면, 50석의 20%인 10석의 비례대표 의원이 A당에 배정되어서 A당 비례대표 후보가 순번에 따라 1번부터 10번까지 당선된다. 유권자 입장에서는 지역구 선거와 달리 자신이 지지하는 3, 4위권의 정당에게 표를 주더라도 당선자를 배출할 수 있다는 점에서, 선택의 폭을 넓힌 제도이다.
 
 한국의 비례대표는 정당명부제로 운영된다. 각 정당은 중앙당의 결정이나 당원 경선을 통해 후보의 명단과 순번을 미리 정한다. 유권자는 오로지 정당에 대해서만 투표할 수 있다. 이와 반대로 네덜란드나 일본(참의원)처럼 유권자가 정당 뿐만 아니라 비례대표 후보 개인에게도 투표할 수 있는 경우가 있는데, 이 경우 후보는 정당에 의해 뒷순번에 배정되더라도 유권자의 득표를 많이 받아서 순번을 앞으로 당겨서 당선될 수 있다. 
 
 한편 한국의 비례대표 제도는, 각 당의 비례대표 후보 명단 홀수 순번에 반드시 여성 후보를 배정하도록 정하고 있다. 때문에 당선된 비례대표의원 중 절반 이상은 여성으로 배정된다. 이 제도는 극도로 왜곡된 국회의원의 성비가 그나마 1:1에 가까워지도록 정상화하는 데에 큰 역할을 했다. 2016년에 당선된 국회의원 300명 중에서, 지역구 의원의 남녀 성비는 227:26, 비례대표 의원의 성비는 22:25였다. 
 ### 비례대표 제도(2): 병립형, 지금까지는.
-한편 지금까지 한국의 비례대표는 “병립형 비례대표제 ”이기도 했다. 비례대표로 배정된 의석 수 안에서 정당마다 득표비율에 맞춰 의석을 배정한다는 개념이다. 반대의 개념은 “연동형 비례대표제 ”라고 부르는데, 이는 ‘비례대표 전체 의석수’가 아닌 ‘지역구를 포함한 전체 의석수’가 득표비율에 맞게 배분되도록 하는 것이다. 예를 들어, 전체 의석은 지역구 250석과 비례대표 50석으로 정해져 있고, A당이 지역구에서 15석을 승리하고 정당득표율이 20%라고 하자. “병립형 ”에서 A당의 비례대표 의석수는 10석이 되어, 총 의석이 25석(지역구 15석 포함)이 된다. 그러나 “연동형 ”에서는, A당의 지역구와 비례대표를 합한 전체 의석수가 전체 300석의 20%인 60석이 되도록 비례대표를 배분한다. 따라서 지역구 15석과 비례대표 45석을 배분받게 된다.
+한편 지금까지 한국의 비례대표는 “병립형 비례대표제”이기도 했다. 비례대표로 배정된 의석 수 안에서 정당마다 득표비율에 맞춰 의석을 배정한다는 개념이다. 반대의 개념은 “연동형 비례대표제”라고 부르는데, 이는 ‘비례대표 전체 의석수’가 아닌 ‘지역구를 포함한 전체 의석수’가 득표비율에 맞게 배분되도록 하는 것이다. 예를 들어, 전체 의석은 지역구 250석과 비례대표 50석으로 정해져 있고, A당이 지역구에서 15석을 승리하고 정당득표율이 20%라고 하자. “병립형”에서 A당의 비례대표 의석수는 10석이 되어, 총 의석이 25석(지역구 15석 포함)이 된다. 그러나 “연동형”에서는, A당의 지역구와 비례대표를 합한 전체 의석수가 전체 300석의 20%인 60석이 되도록 비례대표를 배분한다. 따라서 지역구 15석과 비례대표 45석을 배분받게 된다.
 
-지역구와 비례대표 제도를 동시에 운영하는 국가 중에서는 독일, 뉴질랜드, 스코틀랜드(자치의회) 등에서 연동형을 채택하고, 일본, 러시아, 타이완 등에서 병립형을 채택하고 있다. “정당이 실제로 득표한 비율과 의회 내 의석비율이 비슷할수록 민의를 잘 반영한 것 ”이라는 원칙을 따르자면, 병립형보다 연동형이 더 적합한 비례대표 제도라고 평가할 수 있다. 반대로 병립형은 지역구에서 많은 당선자를 배출할 수 있는 거대정당이 의회 주도권을 가지도록 유도하고, 다만 소수정당도 비례대표를 통해 의회에 입성할 수 있도록 ‘살려는 드리는’ 차원으로 운영된다. 이로 미루어 볼때, 연동형을 채택한 국가는 비례대표 역시 지역구와 동등한 의원으로서 정당을 통해 유권자를 대표한다는 인식을 바탕으로 하고 있으며, 병립형에서는 지역구를 비례대표보다 우대하고 ‘지역구로 당선이 힘든 사람들을 비례대표 제도를 통해 부활시킨다’는 인식을 바탕으로 하고 있다.  
-### 비례대표 제도(3): “의석할당정당 ”
-비례대표 제도의 중요한 특징 중 하나는, 정당이 비례대표를 배분받기 위해 충족해야 하는 조건이다. 한국에서는 정당투표 전국득표율 3% 이상, 또는 지역구 당선인 5석 이상인 정당에게 비례대표 의석을 배분한다. 한국 언론과 정치권에서는 이 조건을 주로 “봉쇄조항 ”이라고 표현한다. 3%의 득표율 기준은 낮은 것처럼 보이기도 하지만, 전체 인구수로 환산하여 150만 명의 지지를 받아야 하므로 마냥 낮다고만 생각할 수도 없다. 
+지역구와 비례대표 제도를 동시에 운영하는 국가 중에서는 독일, 뉴질랜드, 스코틀랜드(자치의회) 등에서 연동형을 채택하고, 일본, 러시아, 타이완 등에서 병립형을 채택하고 있다. “정당이 실제로 득표한 비율과 의회 내 의석비율이 비슷할수록 민의를 잘 반영한 것”이라는 원칙을 따르자면, 병립형보다 연동형이 더 적합한 비례대표 제도라고 평가할 수 있다. 반대로 병립형은 지역구에서 많은 당선자를 배출할 수 있는 거대정당이 의회 주도권을 가지도록 유도하고, 다만 소수정당도 비례대표를 통해 의회에 입성할 수 있도록 ‘살려는 드리는’ 차원으로 운영된다. 이로 미루어 볼때, 연동형을 채택한 국가는 비례대표 역시 지역구와 동등한 의원으로서 정당을 통해 유권자를 대표한다는 인식을 바탕으로 하고 있으며, 병립형에서는 지역구를 비례대표보다 우대하고 ‘지역구로 당선이 힘든 사람들을 비례대표 제도를 통해 부활시킨다’는 인식을 바탕으로 하고 있다.  
+### 비례대표 제도(3): “의석할당정당”
+비례대표 제도의 중요한 특징 중 하나는, 정당이 비례대표를 배분받기 위해 충족해야 하는 조건이다. 한국에서는 정당투표 전국득표율 3% 이상, 또는 지역구 당선인 5석 이상인 정당에게 비례대표 의석을 배분한다. 한국 언론과 정치권에서는 이 조건을 주로 “봉쇄조항”이라고 표현한다. 3%의 득표율 기준은 낮은 것처럼 보이기도 하지만, 전체 인구수로 환산하여 150만 명의 지지를 받아야 하므로 마냥 낮다고만 생각할 수도 없다. 
 
 봉쇄조건을 얼마나 엄격하게 하느냐에 따라 그 나라 소수정당의 운명이 결정된다. 예를 들어, 터키처럼 봉쇄조건을 전국득표율 10% 이상으로 하면 소수정당이 결코 의회에 들어올 수 없지만, 새로운 정당이 일단 한 번 의회에 진입하게 되면 10% 가량의 의석을 차지하는 또다른 대형정당으로 자리 잡으므로 정치구도가 요동친다. 반대로 네덜란드나 아일랜드처럼 봉쇄조항이 아예 없으면 1~ 2석짜리 소수정당이 대거 탄생하지만, 그 소수정당의 지지율이 갑자기 급등하지 않는 이상 극단적인 소수의견도 1~ 2석 정도의 크기로 제어된 채 의회에서 안정적으로 소화할 수 있다. 또는, 스웨덴처럼 전국득표율이 낮더라도 특정 지역의 득표율이 12% 이상이면 비례대표를 배분할 수 있도록 하면, 전국적으로는 외면받지만 소외된 지역 입장에서 중요한 목소리를 대변하는 지역정당도 의회에 입성할 수 있다. 
 
@@ -141,7 +141,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 지금까지의 내용을 보면 의아한 점이 
 
 인구가 늘어나면서 
-국회의원의 업무 강도를 수량으로 측정해보자. 의원 1명당 대변해야 하는 국민의 숫자, 그리고 의원 1명당 심의해야 하는 국가예산의 액수를 따져보자. 한국에서 처음 총선이 시행된 1948년과 가장 최근에 총선이 시행된 2016년 사이에, 인구는 약 2.5배, 국가예산은 1890배가 늘어났다. 그러나 그 사이 국회의원 정원은 1.5배만 증가했다. 지금의 <대한민국헌법> 체제에서 처음 총선이 시행된 1988년과 비교하면 더욱 문제가 분명해진다. 그로부터 28년이 지나는 동안 인구는 약 1000만 명이 증가했고, 국가예산은 약 23배 증가했다. 그러나 그 사이에 국회의원 정원은 299명에서 300명으로 단 1명만 늘어났으며, 그 1명이 늘어났던 것도 2012년에 출범한 세종특별자치시에 지역구의원 1명을 배정하기 위해 “부득이하게 ” 이뤄진 조치였다. 
+국회의원의 업무 강도를 수량으로 측정해보자. 의원 1명당 대변해야 하는 국민의 숫자, 그리고 의원 1명당 심의해야 하는 국가예산의 액수를 따져보자. 한국에서 처음 총선이 시행된 1948년과 가장 최근에 총선이 시행된 2016년 사이에, 인구는 약 2.5배, 국가예산은 1890배가 늘어났다. 그러나 그 사이 국회의원 정원은 1.5배만 증가했다. 지금의 <대한민국헌법> 체제에서 처음 총선이 시행된 1988년과 비교하면 더욱 문제가 분명해진다. 그로부터 28년이 지나는 동안 인구는 약 1000만 명이 증가했고, 국가예산은 약 23배 증가했다. 그러나 그 사이에 국회의원 정원은 299명에서 300명으로 단 1명만 늘어났으며, 그 1명이 늘어났던 것도 2012년에 출범한 세종특별자치시에 지역구의원 1명을 배정하기 위해 “부득이하게” 이뤄진 조치였다. 
 
 
 ## 새로 달라진 선출제도
@@ -152,40 +152,40 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 2016년 총선과 박근혜 대통령 탄핵을 거치면서, 한국 국회는 가장 규모가 큰 2개 정당(더불어민주당, 자유한국당) 외에도 어느 정도 규모를 갖춘 정당. 특히나 국회에서 3, 5, 6, 7번째로 규모가 큰 정당인 바른미래당, 대안신당, 정의당, 민주평화당은 
 -->
 
-### 개정(1): “병립형 ” 비례대표제에서 “절반 연동형 ” 비례대표제로
-<!--(한국 정치권과 언론기사에서는 이 제도를 보통 “준연동형 비례대표제 ”라고 표현한다. 그러나 이 책에서는 독자가 제도 내용을 더 쉽게 이해하도록 “절반 연동형 ”이라는 표현을 사용하기로 한다.)-->
+### 개정(1): “병립형” 비례대표제에서 “절반 연동형” 비례대표제로
+<!--(한국 정치권과 언론기사에서는 이 제도를 보통 “준연동형 비례대표제”라고 표현한다. 그러나 이 책에서는 독자가 제도 내용을 더 쉽게 이해하도록 “절반 연동형”이라는 표현을 사용하기로 한다.)-->
 
-예를 들어보자. A당이 비례대표 정당투표에서 20%의 득표율을 얻고, 지역구의원 5명이 당선되었다고 하자. “절반 연동형 ”의 원칙을 따르면, 
+예를 들어보자. A당이 비례대표 정당투표에서 20%의 득표율을 얻고, 지역구의원 5명이 당선되었다고 하자. “절반 연동형”의 원칙을 따르면, 
 
-(ㄱ) “완전 연동형 ”의 원칙대로 국회에서 A당이 득표율만큼의 의석 비율을 차지하려면, A당은 전체 의석 300석의 20%인 60석을 가져야 한다. 
+(ㄱ) “완전 연동형”의 원칙대로 국회에서 A당이 득표율만큼의 의석 비율을 차지하려면, A당은 전체 의석 300석의 20%인 60석을 가져야 한다. 
 
 (ㄴ) A당은 지역구의원 5석을 이미 가지고 있으므로, A당이 전체 60석을 차지하기 위해서는 비례대표 55석을 가져야 한다. 
 
-(ㄷ) 하지만 한국 선거제도는 “완전 연동형 ”이 아니라 “절반 연동형 ”이니까... A당은 자기 몫의 비례대표 55석 중 절반인 27석만 먼저 가져간다. 
+(ㄷ) 하지만 한국 선거제도는 “완전 연동형”이 아니라 “절반 연동형”이니까... A당은 자기 몫의 비례대표 55석 중 절반인 27석만 먼저 가져간다. 
 
-(ㄹ) 이와 같이 “절반 연동형 ”의 원칙에 맞추어 A당 B당 C당 D당에게 우선 배정되어야 하는 비례대표를 모두 배분한다. 
+(ㄹ) 이와 같이 “절반 연동형”의 원칙에 맞추어 A당 B당 C당 D당에게 우선 배정되어야 하는 비례대표를 모두 배분한다. 
 
 (ㅁ-1) 이렇게 배분한 뒤에 비례대표 의석 정원 47석 중에서 남은 의석이 7석 있다면...
 
 (ㅂ) 각 당의 정당투표 득표율과 같은 비율로 남은 7석을 배분한다. 즉 A당은 7석의 20%인 1~ 2석을 추가로 배정받는다.
 
-이렇게, A당은 지역구의원 5명, “절반 연동형 ” 비례대표의원 27명, 남은 비례대표의석에서 의원 1~ 2명을 확보해서, 총 33~ 34석의 국회의원을 확보하게 된다. 
+이렇게, A당은 지역구의원 5명, “절반 연동형” 비례대표의원 27명, 남은 비례대표의석에서 의원 1~ 2명을 확보해서, 총 33~ 34석의 국회의원을 확보하게 된다. 
 원칙대로는 그래야 하는데...
 
-### 개정(2): “연동형 비례대표 ” 의석수를 30석으로 제한
-2020년 총선에 한하여, “절반 연동형 ”으로 의석을 배분하는 데에 있어서 예외규정이 있다. “절반 연동형 ” 제도에 맞추어 배정되는 비례대표 의석수는 최대 30석으로 제한한다. 만약 그 의석수가 30석을 넘으면, 이것을 다시 30석 안에서 각 정당의 비율에 맞게 재조정한다. (한국 정치권과 언론기사에서는 이 제도를 보통 “최대 30석으로 제한하는 캡을 도입했다 ”고 표현한다.)
+### 개정(2): “연동형 비례대표” 의석수를 30석으로 제한
+2020년 총선에 한하여, “절반 연동형”으로 의석을 배분하는 데에 있어서 예외규정이 있다. “절반 연동형” 제도에 맞추어 배정되는 비례대표 의석수는 최대 30석으로 제한한다. 만약 그 의석수가 30석을 넘으면, 이것을 다시 30석 안에서 각 정당의 비율에 맞게 재조정한다. (한국 정치권과 언론기사에서는 이 제도를 보통 “최대 30석으로 제한하는 캡을 도입했다”고 표현한다.)
 
-아이고 어렵다. 이 이야기를 다시 설명하기 위해, 앞서 설명한 “A당 ”의 예시를 다시 꺼내보자. (ㄹ)까지는 앞서서와 마찬가지이고, (ㅁ)에서부터 이야기가 달라진다.
+아이고 어렵다. 이 이야기를 다시 설명하기 위해, 앞서 설명한 “A당”의 예시를 다시 꺼내보자. (ㄹ)까지는 앞서서와 마찬가지이고, (ㅁ)에서부터 이야기가 달라진다.
 
-(ㅁ-2) “절반 연동형 ”의 원칙에 맞추어 A, B, C, D당에 먼저 배분된 의석수가 합쳐서 40석인데, 이것은 30석의 제한을 넘어선 숫자이다. 
+(ㅁ-2) “절반 연동형”의 원칙에 맞추어 A, B, C, D당에 먼저 배분된 의석수가 합쳐서 40석인데, 이것은 30석의 제한을 넘어선 숫자이다. 
 
-(ㅁ-3) 30석의 제한에 맞추기 위해, 각 당에 배분된 “절반 연동형 ” 비례대표의원 숫자를 조정한다. 모든 정당의 “절반 연동형 의석 ”을 3/4만큼만 배정한다. 
+(ㅁ-3) 30석의 제한에 맞추기 위해, 각 당에 배분된 “절반 연동형” 비례대표의원 숫자를 조정한다. 모든 정당의 “절반 연동형 의석”을 3/4만큼만 배정한다. 
 
-(ㅁ-3) 따라서 A당에 배정되는 “절반 연동형 ” 의석은 27석의 3/4인 20~ 21석이다. 
+(ㅁ-3) 따라서 A당에 배정되는 “절반 연동형” 의석은 27석의 3/4인 20~ 21석이다. 
 
 (ㅂ) 그리고 남은 전체 비례대표 의석수는 17석. A당은 17석의 20%인 3~ 4석을 추가로 배정받는다. 
 
-이렇게 A당은 지역구의원 5명, (총 30석으로 제한된) “절반 연동형 ” 비례대표의원 20~ 21명, 남은 비례대표의석에서 3~ 4명을 확보하여, 총 28~ 30석의 국회의원을 확보하게 된다. 
+이렇게 A당은 지역구의원 5명, (총 30석으로 제한된) “절반 연동형” 비례대표의원 20~ 21명, 남은 비례대표의석에서 3~ 4명을 확보하여, 총 28~ 30석의 국회의원을 확보하게 된다. 
 
 지금까지 살펴본 A당의 예시에서 보듯, 30석의 제한이 생기면 의석수가 적은(특히 지역구 당선자가 적은) 정당에게는 약간의 의석수 손해가 생기는데, 이는 당의 규모가 작을수록 1석의 가치가 중요하다는 점에서 매우 뼈아플 수 있다. 반대로, 지역구 당선자가 많아서 비례대표 의석을 확보하기 힘든 거대정당은, 1~ 2명이라도 더 많은 비례대표 의석을 확보하여 (지역구가 아닌) 전국단위로 활동하는 사람들을 더 많이 국회로 입성시킬 여지가 생긴다. 
 
@@ -194,7 +194,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 1. 지역구 의석 축소, 비례대표 의석 증가: 폐기
 
-개정 협상을 시작할 때 발표된 초안은, 국회의원 정원을 300석으로 유지하면서 지역구 의석과 비례대표 의석을 225석과 75석으로 조정했다. 한국의 비례대표 국회의원은 보통 사회적 소수자, 직업군, 특정 이슈에 대한 전문가 등 지역구를 넘어서 국가단위로 분포하는 계층을 대변하는 역할을 맡았다. 비례대표 의석의 비율을 증가시키면, 이들 계층의 주장이 국회 안에서 더 많이 논의되도록 할 수 있었다. 그러나 2020년 총선의 의석수는 결국 2016년과 마찬가지로 지역구 253석, 비례대표 47석으로 확정되었다. 선거법 개정 협상에 참여한 정당들은 법률 통과 가능성을 높이기 위해 이와 같이 결정했다. 지역구, 특히 농어촌 지역구 숫자가 급격하게 줄어드는 것에 대해 현직 지역구국회의원들의 반발이 너무 컸다. 그렇다고 지역구 의석수를 유지하고 비례대표 의석수만 더 증가시키자니, “전체 국회의원 정수를 축소해도 모자랄 판에 의석수를 늘인다 ”는 여론의 감정적 비판 의견이 쏟아질 것에 대한 우려가 컸다. 2014년에 중앙선관위가, 2019년에 정의당 심상정 대표가 선거법 개정과 맞물려 국회의원 정수를 330~ 360명으로 늘리는 것을 제안하였으나, 모두 소리소문 없이 논의에서 제외되었다. 
+개정 협상을 시작할 때 발표된 초안은, 국회의원 정원을 300석으로 유지하면서 지역구 의석과 비례대표 의석을 225석과 75석으로 조정했다. 한국의 비례대표 국회의원은 보통 사회적 소수자, 직업군, 특정 이슈에 대한 전문가 등 지역구를 넘어서 국가단위로 분포하는 계층을 대변하는 역할을 맡았다. 비례대표 의석의 비율을 증가시키면, 이들 계층의 주장이 국회 안에서 더 많이 논의되도록 할 수 있었다. 그러나 2020년 총선의 의석수는 결국 2016년과 마찬가지로 지역구 253석, 비례대표 47석으로 확정되었다. 선거법 개정 협상에 참여한 정당들은 법률 통과 가능성을 높이기 위해 이와 같이 결정했다. 지역구, 특히 농어촌 지역구 숫자가 급격하게 줄어드는 것에 대해 현직 지역구국회의원들의 반발이 너무 컸다. 그렇다고 지역구 의석수를 유지하고 비례대표 의석수만 더 증가시키자니, “전체 국회의원 정수를 축소해도 모자랄 판에 의석수를 늘인다”는 여론의 감정적 비판 의견이 쏟아질 것에 대한 우려가 컸다. 2014년에 중앙선관위가, 2019년에 정의당 심상정 대표가 선거법 개정과 맞물려 국회의원 정수를 330~ 360명으로 늘리는 것을 제안하였으나, 모두 소리소문 없이 논의에서 제외되었다. 
 
 2. 비례대표 후보 명단을 권역별로 작성: 폐기
 
@@ -202,9 +202,9 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 3. 지역구 후보의 비례대표 입후보 허용: 폐기
 
-아깝게 낙선한 지역구 후보가 비례대표 제도를 통해 당선될 수 있도록 하는 제도도 논의되었으나, 협상 막판에 폐기되었다. 논의되었던 제도는 “석패율제 ”와 “이중등록제 ”였다. 석패율제는 지역구에서 낙선하였지만 1등과의 격차가 가장 적은 후보가 비례대표로 당선되도록 보장하는 제도이다. 이중등록제는 한 후보가 지역구에도 출마하는 동시에 비례대표 명단에도 등록할 수 있도록 허용하는 제도이다. 이 두 가지 제도가 도입되었다면, 지역구에서 활동하는 유능한 정치인이지만 소속정당이 작거나 지역주의 구도 때문에 지역구 1위로 당선되기는 거의 불가능한 후보에게도, 국회에서 활동할 수 있는 길을 열었을 것이다.
+아깝게 낙선한 지역구 후보가 비례대표 제도를 통해 당선될 수 있도록 하는 제도도 논의되었으나, 협상 막판에 폐기되었다. 논의되었던 제도는 “석패율제”와 “이중등록제”였다. 석패율제는 지역구에서 낙선하였지만 1등과의 격차가 가장 적은 후보가 비례대표로 당선되도록 보장하는 제도이다. 이중등록제는 한 후보가 지역구에도 출마하는 동시에 비례대표 명단에도 등록할 수 있도록 허용하는 제도이다. 이 두 가지 제도가 도입되었다면, 지역구에서 활동하는 유능한 정치인이지만 소속정당이 작거나 지역주의 구도 때문에 지역구 1위로 당선되기는 거의 불가능한 후보에게도, 국회에서 활동할 수 있는 길을 열었을 것이다.
 
-4. “봉쇄조항 ” 개정
+4. “봉쇄조항” 개정
 봉쇄조항은 
 (### 예상되는 변화)
 
@@ -225,8 +225,8 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 2019년 11월 17일 ~  2020년 2월 15일 (선거일 150~ 60일 전)
 국외부재자 신고, 재외선거인 등록
 외국의 재외투표소에서 투표해야 하는 (1)국외부재자의 신고와 (2)재외국민의 선거인 등록 기간이다.
-(1) 국내에 거주하지만 투표일에 외국에 체류하는 사람, 또는 한국에 주민등록이 되어있지만 외국에 거주하는 사람은 재외공관에 설치되는 재외투표소에서 투표를 하기 위해, 이 기간 사이에 선관위에 “국외부재자 ”로 신고해야 한다. 
-(2) 재외국민으로서 한국에 주민등록이 되어있지 않은 사람은 “재외선거인 ”으로 등록해야 재외투표소에서 투표를 할 수 있다. 재외선거인으로서 직전 2번의 재외국민선거(2016년 총선, 2017년 대선) 중 한 번이라도 투표한 적이 있다면, 이번에도 이미 재외선거인으로 등재되어 있을 것이다. 그러나 해당 기간에 다시 한 번 선거인 등록여부를 확인하는 것이 제일 안전하다. 
+(1) 국내에 거주하지만 투표일에 외국에 체류하는 사람, 또는 한국에 주민등록이 되어있지만 외국에 거주하는 사람은 재외공관에 설치되는 재외투표소에서 투표를 하기 위해, 이 기간 사이에 선관위에 “국외부재자”로 신고해야 한다. 
+(2) 재외국민으로서 한국에 주민등록이 되어있지 않은 사람은 “재외선거인”으로 등록해야 재외투표소에서 투표를 할 수 있다. 재외선거인으로서 직전 2번의 재외국민선거(2016년 총선, 2017년 대선) 중 한 번이라도 투표한 적이 있다면, 이번에도 이미 재외선거인으로 등재되어 있을 것이다. 그러나 해당 기간에 다시 한 번 선거인 등록여부를 확인하는 것이 제일 안전하다. 
 국외부재자 신고 및 재외선거인 등록 절차는 한국 중앙선관위 또는 자신이 거주하는 나라의 한국 재외공관에 문의할 수 있다. 
 
 3월 16일 (선거일 30일 전)
@@ -305,7 +305,7 @@ Chapter 4, 5에서는 각 시·도별 선거구도와 주목할 선거구를 살
 
 하지만 앞의 이야기는 직업정치인의 생각이고, 유권자 입장에서 2018년 천안시장 선거는 단조로웠을 것이다. 1/2위를 차지한 더불어민주당 구본영과 자유한국당 박상돈은 3년의 나이 차이를 빼면 경력이 거의 비숫하다. 육군사관학교 출신이고, 의무복무를 마친 육사 졸업생을 5급 중앙공무원으로 채용하던 유신헌법 시절의 제도 ‘유신사무관’을 통해 중앙공무원이 되었으며, 2000년대 초반에 민주당계 정당(열린우리당), 2010년에 충청계 보수정당(자유선진당)에서 선거에 출마한 이력까지 똑같다. 자유선진당이 보수주류 정당으로 흡수된 2014년 이후에야 두 정치인의 길이 갈렸다. 달리 말하면, 행적과 정치적 신념에 큰 차이가 없는 두 인물이 맞붙는 매우 단조로운 선거였다. 
 
-2020년에는 이 구도가 달라질까? 만약 더불어민주당이 당헌(제96조)에 규정한 대로 “당 소속 선출직 공직자가 부정부패 사건 등 중대한 잘못으로 그 직위를 상실하여 재·보궐선거를 실시하게 된 경우 해당 선거구에 후보자를 추천하지 아니한다 ”면, 다른 정당을 통해서 또는 더불어민주당이 지지하는 무소속 후보를 통해서 전혀 새로운 인물이 주요 후보로 급부상할 수 있다. 그가 어떤 인물이냐에 따라 선거구도는 완전히 바뀔 수 있다. 
+2020년에는 이 구도가 달라질까? 만약 더불어민주당이 당헌(제96조)에 규정한 대로 “당 소속 선출직 공직자가 부정부패 사건 등 중대한 잘못으로 그 직위를 상실하여 재·보궐선거를 실시하게 된 경우 해당 선거구에 후보자를 추천하지 아니한다”면, 다른 정당을 통해서 또는 더불어민주당이 지지하는 무소속 후보를 통해서 전혀 새로운 인물이 주요 후보로 급부상할 수 있다. 그가 어떤 인물이냐에 따라 선거구도는 완전히 바뀔 수 있다. 
 
 ### 전라북도 진안군수
 전임 군수 이항로의 공직선거법 위반 판결에 따른 당선무효
